#820 - better translation names for letters J to M, refs #820

--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -562,7 +562,7 @@ general.overwrite_all=\u0627\u0633\u062a\u0628\u062f\u0644 \u0627\u0644\u0643\u0
 ##general.password=Password
 general.powerfolder=PowerFolder
 ##general.preview_folder=Preview folder
-general.recyclebin=\u0633\u0644\u0629 \u0627\u0644\u0645\u062d\u0630\u0648\u0641\u0627\u062a
+general.recycle_bin=\u0633\u0644\u0629 \u0627\u0644\u0645\u062d\u0630\u0648\u0641\u0627\u062a
 general.saturday=\u0627\u0644\u0633\u0628\u062a
 ##general.save=Save
 ##general.save.key=S
@@ -602,72 +602,72 @@ invitation_files.description=PowerFolder \u062f\u0639\u0648\u0627\u062a
 ##invite_received_handler.notify.message=You have received a PowerFolder invitation from {0}.
 ##invite_received_handler.notify.title=Invitation Received
 
-limitedconnection.dont_autodetect=\u0644\u0645 \u064a\u0639\u062f \u0645\u0644\u0627\u062d\u0638\u0627 \u0627\u062a\u0635\u0627\u0644 \u0645\u062d\u062f\u0648\u062f
-limitedconnection.text=PowerFolder \u0627\u0643\u062a\u0634\u0641 \u0627\u062a\u0635\u0627\u0644\u0627 \u0645\u062d\u062f\u0648\u062f\u0627 \u0628\u0627\u0644\u0634\u0628\u0643\u0629 .\n\u0642\u062f \u062a\u0643\u0648\u0646 \u0628\u0633\u0628\u0628 \u062c\u062f\u0627\u0631 \u0646\u0627\u0631\u064a , \u0645\u0634\u0627\u0631\u0643\u0629 \u0627\u062a\u0635\u0627\u0644 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a \u0639\u0628\u0631 \u0627\u0644\u0648\u064a\u0646\u062f\u0648\u0632 \u0627\u0648 \u0645\u0642\u062f\u0645 \u0627\u0644\u062e\u062f\u0645\u0629 .\n\u0643\u064a\u0641 \u062a\u0633\u062a\u0637\u064a\u0639 \u062a\u062d\u0633\u064a\u0646 \u0627\u062a\u0635\u0627\u0644\u0643 \u0633\u0648\u0641 \u062a\u062c\u062f \u0627\u0644\u0645\u0639\u0644\u0648\u0645\u0627\u062a \u0639\u0628\u0631 .\nhttp\://docs.powerfolder.com
-limitedconnection.title=\u0627\u062a\u0635\u0627\u0644 \u0645\u062d\u062f\u0648\u062f
+limited_connection.dont_autodetect=\u0644\u0645 \u064a\u0639\u062f \u0645\u0644\u0627\u062d\u0638\u0627 \u0627\u062a\u0635\u0627\u0644 \u0645\u062d\u062f\u0648\u062f
+limited_connection.text=PowerFolder \u0627\u0643\u062a\u0634\u0641 \u0627\u062a\u0635\u0627\u0644\u0627 \u0645\u062d\u062f\u0648\u062f\u0627 \u0628\u0627\u0644\u0634\u0628\u0643\u0629 .\n\u0642\u062f \u062a\u0643\u0648\u0646 \u0628\u0633\u0628\u0628 \u062c\u062f\u0627\u0631 \u0646\u0627\u0631\u064a , \u0645\u0634\u0627\u0631\u0643\u0629 \u0627\u062a\u0635\u0627\u0644 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a \u0639\u0628\u0631 \u0627\u0644\u0648\u064a\u0646\u062f\u0648\u0632 \u0627\u0648 \u0645\u0642\u062f\u0645 \u0627\u0644\u062e\u062f\u0645\u0629 .\n\u0643\u064a\u0641 \u062a\u0633\u062a\u0637\u064a\u0639 \u062a\u062d\u0633\u064a\u0646 \u0627\u062a\u0635\u0627\u0644\u0643 \u0633\u0648\u0641 \u062a\u062c\u062f \u0627\u0644\u0645\u0639\u0644\u0648\u0645\u0627\u062a \u0639\u0628\u0631 .\nhttp\://docs.powerfolder.com
+limited_connection.title=\u0627\u062a\u0635\u0627\u0644 \u0645\u062d\u062f\u0648\u062f
 
-linespeed.T1=T1 (1.544mbit)
-linespeed.T3=T3 (43.232mbit)
-linespeed.adsl128=DSL 1000 (128Kbit up)
-linespeed.adsl256=DSL 2000 (256Kbit up)
-linespeed.adsl512=DSL 6000 (512Kbit up)
-linespeed.adsl768=DSL 16000 (768Kbit up)
-linespeed.customspeed=\u062e\u0637 \u0645\u062e\u0635\u0635
-linespeed.downloadspeed=\u0627\u0644\u062d\u062f \u0627\u0644\u0627\u0642\u0635\u0649 \u0644\u0644\u062a\u062d\u0645\u064a\u0644
-linespeed.isdnspeed128=Dual ISDN (128Kbit up)
-linespeed.isdnspeed64=ISDN (64Kbit up)
-linespeed.lan10=\u0634\u0628\u0643\u0629  10mbit/s
-linespeed.lan100=\u0634\u0628\u0643\u0629  100mbit/s
-linespeed.lan1000=\u0634\u0628\u0643\u0629  1000mbit/s
-linespeed.unlimited=\u063a\u064a\u0631 \u0645\u062d\u062f\u0648\u062f
-linespeed.uploadspeed=\u0627\u0644\u062d\u062f \u0627\u0644\u0627\u0642\u0635\u0649 \u0644\u0644\u0631\u0641\u0639
+line_speed.T1=T1 (1.544mbit)
+line_speed.T3=T3 (43.232mbit)
+line_speed.adsl128=DSL 1000 (128Kbit up)
+line_speed.adsl256=DSL 2000 (256Kbit up)
+line_speed.adsl512=DSL 6000 (512Kbit up)
+line_speed.adsl768=DSL 16000 (768Kbit up)
+line_speed.custom_speed=\u062e\u0637 \u0645\u062e\u0635\u0635
+line_speed.download_speed=\u0627\u0644\u062d\u062f \u0627\u0644\u0627\u0642\u0635\u0649 \u0644\u0644\u062a\u062d\u0645\u064a\u0644
+line_speed.isdn_speed128=Dual ISDN (128Kbit up)
+line_speed.isdn_speed64=ISDN (64Kbit up)
+line_speed.lan10=\u0634\u0628\u0643\u0629  10mbit/s
+line_speed.lan100=\u0634\u0628\u0643\u0629  100mbit/s
+line_speed.lan1000=\u0634\u0628\u0643\u0629  1000mbit/s
+line_speed.unlimited=\u063a\u064a\u0631 \u0645\u062d\u062f\u0648\u062f
+line_speed.upload_speed=\u0627\u0644\u062d\u062f \u0627\u0644\u0627\u0642\u0635\u0649 \u0644\u0644\u0631\u0641\u0639
 
 linktoclipboard.description=\u0625\u0646 \u0646\u0633\u062e \u0631\u0648\u0627\u0628\u0637 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a \u0627\u0644\u062e\u0627\u0635\u0629 \u0628 PowerFolder \u0639\u0644\u0649 \u0644\u0648\u062d \u0627\u0644\u0646\u0633\u062e , \u064a\u0645\u0643\u0646 \u0627\u0644\u0627\u062e\u0631\u064a\u0646 \u0645\u0646 \u0627\u0644\u0627\u0646\u0636\u0645\u0627\u0645 \u0625\u0644\u0649 \u0647\u0630\u0627 \u0627\u0644\u0645\u062c\u0644\u062f \u0648\u062a\u062d\u0645\u064a\u0644 \u0627\u0644\u0645\u0644\u0641\u0627\u062a
 linktoclipboard.key=\u0624
 linktoclipboard.name=\u0646\u0633\u062e \u0631\u0648\u0627\u0628\u0643 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a \u0627\u0644\u062e\u0627\u0635\u0629 \u0628 PowerFolder
 
-loadinvitation.title=\u0625\u0646\u0636\u0645 \u0625\u0644\u0649 \u0645\u062c\u0644\u062f \u0645\u0646 \u062e\u0644\u0627\u0644 \u0645\u0644\u0641 \u062f\u0639\u0648\u0629
+load_invitation.title=\u0625\u0646\u0636\u0645 \u0625\u0644\u0649 \u0645\u062c\u0644\u062f \u0645\u0646 \u062e\u0644\u0627\u0644 \u0645\u0644\u0641 \u062f\u0639\u0648\u0629
 
-##lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
-##lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
-##lowmemory.do_nothing=Do Nothing
-##lowmemory.increase=Increase Memory
-##lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
-##lowmemory.title=Low memory
+##low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
+##low_memory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
+##low_memory.do_nothing=Do Nothing
+##low_memory.increase=Increase Memory
+##low_memory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
+##low_memory.title=Low memory
 
-masternode.nobody=- \u0644\u0627 \u0623\u062d\u062f -
+master_node.nobody=- \u0644\u0627 \u0623\u062d\u062f -
 
 member.friend=\u0635\u062f\u064a\u0642
 member.non_mutual_friend=\u0635\u062f\u064a\u0642 \u063a\u064a\u0631 \u0645\u062a\u0628\u0627\u062f\u0644
-member.onlan=\u0639\u0644\u0649 \u0627\u0644\u0634\u0628\u0643\u0629
+member.on_lan=\u0639\u0644\u0649 \u0627\u0644\u0634\u0628\u0643\u0629
 member.supernode=\u0625\u0631\u062a\u0628\u0627\u0637 \u0642\u0648\u064a
 
-mirrorfolder.description=\u0642\u0645 \u0628\u062a\u0643\u0648\u064a\u0646 \u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u062e\u0632\u064a\u0646 \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a \u0644\u064a\u062a\u0645 \u0623\u062e\u0630 \u0646\u0633\u062e\u0629 \u0625\u062d\u062a\u064a\u0627\u0637\u064a\u0629 \u0644\u0644\u0645\u062c\u0644\u062f
-mirrorfolder.key=\u0644\u0627
-mirrorfolder.name=\u0623\u062e\u0630 \u0646\u0633\u062e\u0629 \u0625\u062d\u062a\u064a\u0627\u0637\u064a\u0629 \u0644\u0644\u0645\u062c\u0644\u062f
+mirror_folder.description=\u0642\u0645 \u0628\u062a\u0643\u0648\u064a\u0646 \u0648\u062d\u062f\u0629 \u0627\u0644\u062a\u062e\u0632\u064a\u0646 \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a \u0644\u064a\u062a\u0645 \u0623\u062e\u0630 \u0646\u0633\u062e\u0629 \u0625\u062d\u062a\u064a\u0627\u0637\u064a\u0629 \u0644\u0644\u0645\u062c\u0644\u062f
+mirror_folder.key=\u0644\u0627
+mirror_folder.name=\u0623\u062e\u0630 \u0646\u0633\u062e\u0629 \u0625\u062d\u062a\u064a\u0627\u0637\u064a\u0629 \u0644\u0644\u0645\u062c\u0644\u062f
 
-mp3fileinfo.album=\u0623\u0644\u0628\u0648\u0645
-mp3fileinfo.artist=\u0627\u0644\u0641\u0646\u0627\u0646
-mp3fileinfo.bitrate=\u0645\u0639\u062f\u0644 \u0642\u0644\u064a\u0644
-mp3fileinfo.length=\u0627\u0644\u0637\u0648\u0644
-mp3fileinfo.samplerate=\u0645\u0639\u062f\u0644 \u0628\u0633\u064a\u0637
-mp3fileinfo.size=\u0627\u0644\u062d\u062c\u0645
-mp3fileinfo.stereo_mono=Stereo/Mono
-mp3fileinfo.title=\u0627\u0644\u0639\u0646\u0648\u0627\u0646
+mp3_file_info.album=\u0623\u0644\u0628\u0648\u0645
+mp3_file_info.artist=\u0627\u0644\u0641\u0646\u0627\u0646
+mp3_file_info.bit_rate=\u0645\u0639\u062f\u0644 \u0642\u0644\u064a\u0644
+mp3_file_info.length=\u0627\u0644\u0637\u0648\u0644
+mp3_file_info.sample_rate=\u0645\u0639\u062f\u0644 \u0628\u0633\u064a\u0637
+mp3_file_info.size=\u0627\u0644\u062d\u062c\u0645
+mp3_file_info.stereo_mono=Stereo/Mono
+mp3_file_info.title=\u0627\u0644\u0639\u0646\u0648\u0627\u0646
 
 ##my_folders_panel.hide_previews=Hide preview folders
 
-myfolderstable._total_number_of_files=\u0627\u0644\u0645\u062c\u0645\u0648\u0639  \# \u0627\u0644\u0645\u0644\u0641\u0627\u062a
-myfolderstable.local_size=\u0627\u0644\u062d\u062c\u0645 \u0627\u0644\u0645\u062d\u0644\u064a
-myfolderstable.members=\u0627\u0644\u0623\u0639\u0636\u0627\u0621
-##myfolderstable.new_files=New Files
-myfolderstable.number_of_deleted_files=\# \u0645\u062d\u0630\u0648\u0641
-##myfolderstable.number_of_incoming_files=Incoming
-myfolderstable.number_of_local_files=\# \u0645\u062d\u0644\u064a
-myfolderstable.number_of_members={0} \u0623\u0639\u0636\u0627\u0621
-myfolderstable.sync=\u0645\u0632\u0627\u0645\u0646\u0629
-myfolderstable.syncprofile=\u0645\u0644\u0641 \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629
-myfolderstable.total_size=\u0627\u0644\u062d\u062c\u0645 \u0627\u0644\u0627\u062c\u0645\u0627\u0644\u064a
+my_folders_table._total_number_of_files=\u0627\u0644\u0645\u062c\u0645\u0648\u0639  \# \u0627\u0644\u0645\u0644\u0641\u0627\u062a
+my_folders_table.local_size=\u0627\u0644\u062d\u062c\u0645 \u0627\u0644\u0645\u062d\u0644\u064a
+my_folders_table.members=\u0627\u0644\u0623\u0639\u0636\u0627\u0621
+##my_folders_table.new_files=New Files
+my_folders_table.number_of_deleted_files=\# \u0645\u062d\u0630\u0648\u0641
+##my_folders_table.number_of_incoming_files=Incoming
+my_folders_table.number_of_local_files=\# \u0645\u062d\u0644\u064a
+my_folders_table.number_of_members={0} \u0623\u0639\u0636\u0627\u0621
+my_folders_table.sync=\u0645\u0632\u0627\u0645\u0646\u0629
+my_folders_table.transfer_mode=\u0645\u0644\u0641 \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629
+my_folders_table.total_size=\u0627\u0644\u062d\u062c\u0645 \u0627\u0644\u0627\u062c\u0645\u0627\u0644\u064a
 
 navigationbuttons.back=\u0639\u0648\u062f\u0629
 navigationbuttons.back_to=\u0639\u0648\u062f\u0629 \u0625\u0644\u0649  {0}
@@ -778,7 +778,7 @@ preferences.dialog.dialogs.title=\u0645\u062d\u0627\u0648\u0631\u0627\u062a
 ##preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a profile for multiple folders
 preferences.dialog.dialogs.warnoncloseifnotinsync=\u0625\u0639\u0637\u0627\u0621 \u062a\u0646\u0628\u064a\u0647 \u0639\u0646\u062f \u0625\u063a\u0644\u0627\u0642 \u0627\u0644\u0628\u0631\u0646\u0627\u0645\u062c \u0641\u064a \u062d\u0627\u0644 \u0648\u062c\u0648\u062f \u0645\u0644\u0641 \u0642\u064a\u062f \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629
 preferences.dialog.dialogs.warnonlimitedconnectivity=\u0627\u0644\u062a\u0646\u0628\u064a\u0647 \u0639\u0646\u062f \u0648\u062c\u0648\u062f \u0627\u062a\u0635\u0627\u0644 \u0645\u062d\u062f\u0648\u062f  (\u0644\u0627\u064a\u0648\u062c\u062f \u0625\u062a\u0635\u0627\u0644\u0627\u062a \u0642\u0627\u062f\u0645\u0629 )
-##preferences.dialog.dialogs.warnonlowmemory=Warn on low available memory
+##preferences.dialog.dialogs.warnonlow_memory=Warn on low available memory
 preferences.dialog.dialogs.warnonpossiblefilename_problems=\u0627\u0644\u062a\u0646\u0628\u064a\u0647 \u0639\u0646\u062f \u0648\u062c\u0648\u062f \u0645\u0634\u0643\u0644\u0629 \u0641\u064a \u0627\u0633\u0645 \u0645\u0644\u0641  (\u0645\u062b\u0627\u0644 . \u0637\u0648\u064a\u0644 \u062c\u062f\u0627 \u0628\u0627\u0644\u0646\u0633\u0628\u0629 \u0644\u0646\u0638\u0627\u0645 \u0627\u0628\u0644 \u0627\u0644\u0645\u0639\u062a\u0627\u062f)
 preferences.dialog.dyndns=\u0639\u0646\u0648\u0627\u0646\u064a (\u0627\u0644\u062f\u064a\u0646\u0627\u0645\u064a\u0643\u064a) DNS
 preferences.dialog.dyndns.title=\u0627\u0644\u062f\u064a\u0646\u0627\u0645\u064a\u0643\u064a DNS
@@ -1276,11 +1276,11 @@ wizard.filesharing.sharedsuccess=\u0644\u0642\u062f \u0642\u0645\u062a \u0628\u0
 ##wizard.host_panel.pcsjoin=Other computers can join this folder now
 ##wizard.host_panel.select=Please select the directory which should be the host
 ##wizard.invite.selectlocaldirectory=Please select local target directory for the files
-wizard.loadinvitation.addtofriends=\u0625\u0636\u0627\u0641\u0629  {0} \u0625\u0644\u0649 \u0627\u0644\u0627\u0635\u062f\u0642\u0627\u0621
-wizard.loadinvitation.choosefile=\u0627\u062e\u062a\u0631 \u0645\u0644\u0641 \u0627\u0644\u062f\u0639\u0648\u0629
-wizard.loadinvitation.select=\u0627\u062e\u062a\u0631 \u0645\u0644\u0641 \u0627\u0644\u062f\u0639\u0648\u0629
-wizard.loadinvitation.selectfile=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u062e\u062a\u064a\u0627\u0631 \u0645\u0644\u0641 \u0627\u0644\u062f\u0639\u0648\u0629
-wizard.loadinvitation.title=\u062d\u0645\u0644 \u062f\u0639\u0648\u0629
+wizard.load_invitation.addtofriends=\u0625\u0636\u0627\u0641\u0629  {0} \u0625\u0644\u0649 \u0627\u0644\u0627\u0635\u062f\u0642\u0627\u0621
+wizard.load_invitation.choosefile=\u0627\u062e\u062a\u0631 \u0645\u0644\u0641 \u0627\u0644\u062f\u0639\u0648\u0629
+wizard.load_invitation.select=\u0627\u062e\u062a\u0631 \u0645\u0644\u0641 \u0627\u0644\u062f\u0639\u0648\u0629
+wizard.load_invitation.selectfile=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u062e\u062a\u064a\u0627\u0631 \u0645\u0644\u0641 \u0627\u0644\u062f\u0639\u0648\u0629
+wizard.load_invitation.title=\u062d\u0645\u0644 \u062f\u0639\u0648\u0629
 ##wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.pfwizard.title=\u0645\u0639\u0627\u0644\u062c \u0627\u0644\u062a\u0643\u0648\u064a\u0646
 ##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
