--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -631,7 +631,7 @@ general.overwrite_all=Alles \u00fcberschreiben
 general.password=Passwort
 general.powerfolder=PowerFolder
 general.preview_folder=Vorschau
-general.recyclebin=Papierkorb
+general.recycle_bin=Papierkorb
 general.saturday=Samstag
 general.save=Speichern
 general.save.key=S
@@ -671,68 +671,68 @@ invitation_files.description=PowerFolder Einladungen
 invite_received_handler.notify.message=Sie haben eine Einladung von {0} erhalten.
 invite_received_handler.notify.title=Einladung erhalten
 
-limitedconnection.dont_autodetect=Konnektivit\u00e4t nicht l\u00e4nger pr\u00fcfen
-limitedconnection.text=PowerFolder hat eingeschr\u00e4nkte Konnektivit\u00e4t zum Netzwerk entdeckt.\nDer Grund k\u00f6nnte an Ihrer Firewall, Ihrem Router oder an einer Windows-Verbindungsteilung liegen.\nWie Sie die Konnektivit\u00e4t verbessern k\u00f6nnen, erfahren Sie unter\: \nhttp\://docs.powerfolder.com
-limitedconnection.title=Eingeschr\u00e4nkte Konnektivit\u00e4t
+limited_connection.dont_autodetect=Konnektivit\u00e4t nicht l\u00e4nger pr\u00fcfen
+limited_connection.text=PowerFolder hat eingeschr\u00e4nkte Konnektivit\u00e4t zum Netzwerk entdeckt.\nDer Grund k\u00f6nnte an Ihrer Firewall, Ihrem Router oder an einer Windows-Verbindungsteilung liegen.\nWie Sie die Konnektivit\u00e4t verbessern k\u00f6nnen, erfahren Sie unter\: \nhttp\://docs.powerfolder.com
+limited_connection.title=Eingeschr\u00e4nkte Konnektivit\u00e4t
 
-linespeed.T1=T1 (1.544mbit)
-linespeed.T3=T3 (43.232mbit)
-linespeed.adsl128=DSL 1000 (128Kbit up)
-linespeed.adsl256=DSL 2000 (256Kbit up)
-linespeed.adsl512=DSL 6000 (512Kbit up)
-linespeed.adsl768=DSL 16000 (768Kbit up)
-linespeed.customspeed=Benutzerdefiniert
-linespeed.downloadspeed=Download Limit
-linespeed.isdnspeed128=Dual ISDN (128Kbit up)
-linespeed.isdnspeed64=ISDN (64Kbit up)
-linespeed.lan10=LAN 10mbit/s
-linespeed.lan100=LAN 100mbit/s
-linespeed.lan1000=LAN 1000mbit/s
-linespeed.unlimited=Unbegrenzt
-linespeed.uploadspeed=Upload Limit
+line_speed.T1=T1 (1.544mbit)
+line_speed.T3=T3 (43.232mbit)
+line_speed.adsl128=DSL 1000 (128Kbit up)
+line_speed.adsl256=DSL 2000 (256Kbit up)
+line_speed.adsl512=DSL 6000 (512Kbit up)
+line_speed.adsl768=DSL 16000 (768Kbit up)
+line_speed.custom_speed=Benutzerdefiniert
+line_speed.download_speed=Download Limit
+line_speed.isdn_speed128=Dual ISDN (128Kbit up)
+line_speed.isdn_speed64=ISDN (64Kbit up)
+line_speed.lan10=LAN 10mbit/s
+line_speed.lan100=LAN 100mbit/s
+line_speed.lan1000=LAN 1000mbit/s
+line_speed.unlimited=Unbegrenzt
+line_speed.upload_speed=Upload Limit
 
-loadinvitation.title=Treten Sie einem Folder \u00fcber eine Einladung bei
+load_invitation.title=Treten Sie einem Folder \u00fcber eine Einladung bei
 
-lowmemory.configure_failure=PowerFolder konnten keine h\u00f6heren Hauptspeicher-Einstellungen installieren.
-lowmemory.configure_success=H\u00f6here Hauptspeicher-Einstellungen wurden installiert.\nPowerFolder muss neu gestartet werden, damit die Einstellungen aktiv werden.
-lowmemory.do_nothing=Ignorieren
-lowmemory.increase=Einstellungen erh\u00f6hen
-lowmemory.text=PowerFolder steht nicht gen\u00fcgend Hauptspeicher zu Verf\u00fcgung.\n\nPowerFolder kann jetzt die Hauptspeicher-Einstellungen erh\u00f6hen.
-lowmemory.title=Wenig Hauptspeicher
+low_memory.configure_failure=PowerFolder konnten keine h\u00f6heren Hauptspeicher-Einstellungen installieren.
+low_memory.configure_success=H\u00f6here Hauptspeicher-Einstellungen wurden installiert.\nPowerFolder muss neu gestartet werden, damit die Einstellungen aktiv werden.
+low_memory.do_nothing=Ignorieren
+low_memory.increase=Einstellungen erh\u00f6hen
+low_memory.text=PowerFolder steht nicht gen\u00fcgend Hauptspeicher zu Verf\u00fcgung.\n\nPowerFolder kann jetzt die Hauptspeicher-Einstellungen erh\u00f6hen.
+low_memory.title=Wenig Hauptspeicher
 
-masternode.nobody=- Niemand -
+master_node.nobody=- Niemand -
 
 member.friend=Freund
 member.non_mutual_friend=Keine gegenseitige Freundschaft
-member.onlan=Im LAN
+member.on_lan=Im LAN
 member.supernode=Supernode
 
-mirrorfolder.description=Backup eines Folders auf den Online Speicher
-mirrorfolder.key=B
-mirrorfolder.name=Backup Folder
+mirror_folder.description=Backup eines Folders auf den Online Speicher
+mirror_folder.key=B
+mirror_folder.name=Backup Folder
 
-mp3fileinfo.album=Album
-mp3fileinfo.artist=Interpret
-mp3fileinfo.bitrate=Bitrate
-mp3fileinfo.length=Dauer
-mp3fileinfo.samplerate=Samplerate
-mp3fileinfo.size=Gr\u00f6\u00dfe
-mp3fileinfo.stereo_mono=Stereo/Mono
-mp3fileinfo.title=Titel
+mp3_file_info.album=Album
+mp3_file_info.artist=Interpret
+mp3_file_info.bit_rate=Bitrate
+mp3_file_info.length=Dauer
+mp3_file_info.sample_rate=Samplerate
+mp3_file_info.size=Gr\u00f6\u00dfe
+mp3_file_info.stereo_mono=Stereo/Mono
+mp3_file_info.title=Titel
 
 my_folders_panel.hide_previews=Vorschau-Folder verstecken
 
-myfolderstable._total_number_of_files=Gesamt \# Dateien
-myfolderstable.local_size=Lokale Gr\u00f6sse
-myfolderstable.members=Mitglieder
-myfolderstable.new_files=Neue Dateien
-myfolderstable.number_of_deleted_files=\# Gel\u00f6scht
-myfolderstable.number_of_incoming_files=Eingehende
-myfolderstable.number_of_local_files=\# Lokal
-myfolderstable.number_of_members={0} Teilnehmer
-myfolderstable.sync=Sync
-myfolderstable.syncprofile=Transfer Modus
-myfolderstable.total_size=Totale Gr\u00f6sse
+my_folders_table._total_number_of_files=Gesamt \# Dateien
+my_folders_table.local_size=Lokale Gr\u00f6sse
+my_folders_table.members=Mitglieder
+my_folders_table.new_files=Neue Dateien
+my_folders_table.number_of_deleted_files=\# Gel\u00f6scht
+my_folders_table.number_of_incoming_files=Eingehende
+my_folders_table.number_of_local_files=\# Lokal
+my_folders_table.number_of_members={0} Teilnehmer
+my_folders_table.sync=Sync
+my_folders_table.transfer_mode=Transfer Modus
+my_folders_table.total_size=Totale Gr\u00f6sse
 
 navigationbuttons.back=Zur\u00fcck
 navigationbuttons.back_to=Zur\u00fcck zu {0}
@@ -843,7 +843,7 @@ preferences.dialog.dialogs.title=Dialoge
 ##preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a profile for multiple folders
 preferences.dialog.dialogs.warnoncloseifnotinsync=Beim Schlieﬂen warnen, wenn die Synchronisation noch nicht abgeschlossen ist
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warnung eingeschr\u00e4nkter Konnektivit\u00e4t
-preferences.dialog.dialogs.warnonlowmemory=Warnen wenn wenig Hauptspeicher verf\u00fcgbar ist
+preferences.dialog.dialogs.warnonlow_memory=Warnen wenn wenig Hauptspeicher verf\u00fcgbar ist
 preferences.dialog.dialogs.warnonpossiblefilename_problems=Warnung bei m\u00f6glichen Problem mit Dateinamen
 preferences.dialog.dyndns=Meine (dynamische) Adresse
 preferences.dialog.dyndns.title=DynDNS
@@ -1337,11 +1337,11 @@ wizard.host_panel.folder_host_success=Verzeichnis wurde erfolgreich freigegeben\
 wizard.host_panel.pcsjoin=Sie k\u00f6nnen nun anderen Computern Zugriff geben.
 wizard.host_panel.select=Welches Verzeichnis soll freigegeben werden?
 wizard.invite.selectlocaldirectory=W\u00e4hlen Sie das lokale Verzeichnis aus
-wizard.loadinvitation.addtofriends={0} der Freundesliste hizuf\u00fcgen
-wizard.loadinvitation.choosefile=Einladungs-Datei \u00f6ffnen
-wizard.loadinvitation.select=Einladung-Datei ausw\u00e4hlen
-wizard.loadinvitation.selectfile=Einladungs-Datei ausw‰hlen
-wizard.loadinvitation.title=Einladung \u00f6ffnen
+wizard.load_invitation.addtofriends={0} der Freundesliste hizuf\u00fcgen
+wizard.load_invitation.choosefile=Einladungs-Datei \u00f6ffnen
+wizard.load_invitation.select=Einladung-Datei ausw\u00e4hlen
+wizard.load_invitation.selectfile=Einladungs-Datei ausw‰hlen
+wizard.load_invitation.title=Einladung \u00f6ffnen
 wizard.login_online_storage.setup_default=Beispiel Verzeichnis synchronisieren
 wizard.pfwizard.title=Assistent
 wizard.project_panel.folder_project_success=Die Projektsynchronisation wurde erfolgreich eingerichtet\!\n
