--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -561,7 +561,7 @@ general.overwrite_all=Sobreescribir todos
 general.password=Contrase\u00F1oa
 general.powerfolder=PowerFolder
 general.preview_folder=Previsualizar carpeta
-general.recyclebin=Papelera de Reciclaje
+general.recycle_bin=Papelera de Reciclaje
 general.saturday=S\u00E1bado
 general.save=Guardar
 general.save.key=S
@@ -601,72 +601,72 @@ invitation_files.description=Invitaciones PowerFolder
 invite_received_handler.notify.message=Acabas de recibier una invitaci\u00F3n PowerFolder de {0}.
 invite_received_handler.notify.title=Invitaci\u00F3n recibida
 
-limitedconnection.dont_autodetect=Dejar de detectar conecci\u00F3n limitada
-limitedconnection.text=PowerFolder ha detectado conectividad limitada a la red.\nPuede ser a causa de un cortafuegos, router o la Conexi\u00F3n Compartida de Windows.\nLa respuesta a c\u00F3mo mejorar su conexi\u00F3n la puede encontrar en nuestro FAQ.\nhttp\://www.powerfolder.com
-limitedconnection.title=Conectividad limitada
+limited_connection.dont_autodetect=Dejar de detectar conecci\u00F3n limitada
+limited_connection.text=PowerFolder ha detectado conectividad limitada a la red.\nPuede ser a causa de un cortafuegos, router o la Conexi\u00F3n Compartida de Windows.\nLa respuesta a c\u00F3mo mejorar su conexi\u00F3n la puede encontrar en nuestro FAQ.\nhttp\://www.powerfolder.com
+limited_connection.title=Conectividad limitada
 
-linespeed.T1=T1 (1.544mbit)
-linespeed.T3=T3 (43.232mbit)
-linespeed.adsl128=DSL 1000 (128Kbit up)
-linespeed.adsl256=DSL 2000 (256Kbit up)
-linespeed.adsl512=DSL 6000 (512Kbit up)
-linespeed.adsl768=DSL 16000 (768Kbit up)
-linespeed.customspeed=Linea personalizada
-linespeed.downloadspeed=Limitar Descarga
-linespeed.isdnspeed128=Dual ISDN (128Kbit up)
-linespeed.isdnspeed64=ISDN (64Kbit up)
-linespeed.lan10=LAN 10mbit/s
-linespeed.lan100=LAN 100mbit/s
-linespeed.lan1000=LAN 1000mbit/s
-linespeed.unlimited=No limitar el tr\u00E1fico
-linespeed.uploadspeed=Limitar Subida
+line_speed.T1=T1 (1.544mbit)
+line_speed.T3=T3 (43.232mbit)
+line_speed.adsl128=DSL 1000 (128Kbit up)
+line_speed.adsl256=DSL 2000 (256Kbit up)
+line_speed.adsl512=DSL 6000 (512Kbit up)
+line_speed.adsl768=DSL 16000 (768Kbit up)
+line_speed.custom_speed=Linea personalizada
+line_speed.download_speed=Limitar Descarga
+line_speed.isdn_speed128=Dual ISDN (128Kbit up)
+line_speed.isdn_speed64=ISDN (64Kbit up)
+line_speed.lan10=LAN 10mbit/s
+line_speed.lan100=LAN 100mbit/s
+line_speed.lan1000=LAN 1000mbit/s
+line_speed.unlimited=No limitar el tr\u00E1fico
+line_speed.upload_speed=Limitar Subida
 
 linktoclipboard.description=Copia un enlace PowerFolder al portapapeles, \u00FAselo para permitir que otros se unan a esta carpeta y descargen el archivo
 linktoclipboard.key=c
 linktoclipboard.name=Copiar enlace PowerFolder al portapapeles
 
-loadinvitation.title=Unirse a una carpeta desde un archivo invitaci\u00F3n
+load_invitation.title=Unirse a una carpeta desde un archivo invitaci\u00F3n
 
-lowmemory.configure_failure=PowerFolder fracas\u00F3 en el intento de configurar memoria adicional.\nFavor de contactar el Soporte T\u00E9cnico para mayor informaci\u00F3n
-lowmemory.configure_success=Memoria adicional ha sido configurada.\nPowerFolder debe terminar y volver a ser iniciado para que los cambios hagan efecto.
-lowmemory.do_nothing=Ignorar
-lowmemory.increase=Incrementar Memoria
-lowmemory.text=PowerFolder tiene escasez de memoria disponible.\n\nPowerFolder puede intentar incrementar la memoria disponible.
-lowmemory.title=Escasez de Memoria
+low_memory.configure_failure=PowerFolder fracas\u00F3 en el intento de configurar memoria adicional.\nFavor de contactar el Soporte T\u00E9cnico para mayor informaci\u00F3n
+low_memory.configure_success=Memoria adicional ha sido configurada.\nPowerFolder debe terminar y volver a ser iniciado para que los cambios hagan efecto.
+low_memory.do_nothing=Ignorar
+low_memory.increase=Incrementar Memoria
+low_memory.text=PowerFolder tiene escasez de memoria disponible.\n\nPowerFolder puede intentar incrementar la memoria disponible.
+low_memory.title=Escasez de Memoria
 
-masternode.nobody=- ninguno -
+master_node.nobody=- ninguno -
 
 member.friend=Amigo
 member.non_mutual_friend=Amigo no mutuo
-member.onlan=En LAN
+member.on_lan=En LAN
 member.supernode=Supernodo
 
-mirrorfolder.description=Configurar el almacen en linea para respaldo de carpeta
-mirrorfolder.key=B
-mirrorfolder.name=Carpeta de Respaldo
+mirror_folder.description=Configurar el almacen en linea para respaldo de carpeta
+mirror_folder.key=B
+mirror_folder.name=Carpeta de Respaldo
 
-mp3fileinfo.album=\u00C1lbum
-mp3fileinfo.artist=Art\u00EDsta
-mp3fileinfo.bitrate=Bitrate
-mp3fileinfo.length=Longitud
-mp3fileinfo.samplerate=Samplerate
-mp3fileinfo.size=Tama\u00F1o
-mp3fileinfo.stereo_mono=Est\u00E9reo/Mono
-mp3fileinfo.title=T\u00EDtulo
+mp3_file_info.album=\u00C1lbum
+mp3_file_info.artist=Art\u00EDsta
+mp3_file_info.bit_rate=Bitrate
+mp3_file_info.length=Longitud
+mp3_file_info.sample_rate=Samplerate
+mp3_file_info.size=Tama\u00F1o
+mp3_file_info.stereo_mono=Est\u00E9reo/Mono
+mp3_file_info.title=T\u00EDtulo
 
 my_folders_panel.hide_previews=Esconder carpetas de previsualizaci\u00F3n
 
-myfolderstable._total_number_of_files=N\u00BA total de archivos
-myfolderstable.local_size=Tama\u00F1o local
-myfolderstable.members=Miembros
-myfolderstable.new_files=Archivos nuevos
-myfolderstable.number_of_deleted_files=N\u00BA borrados
-myfolderstable.number_of_incoming_files=Entrando
-myfolderstable.number_of_local_files=N\u00BA locales
-myfolderstable.number_of_members={0} miembros
-myfolderstable.sync=Sinc
-myfolderstable.syncprofile=Perfil de sincronizaci\u00F3n
-myfolderstable.total_size=Tama\u00F1o total
+my_folders_table._total_number_of_files=N\u00BA total de archivos
+my_folders_table.local_size=Tama\u00F1o local
+my_folders_table.members=Miembros
+my_folders_table.new_files=Archivos nuevos
+my_folders_table.number_of_deleted_files=N\u00BA borrados
+my_folders_table.number_of_incoming_files=Entrando
+my_folders_table.number_of_local_files=N\u00BA locales
+my_folders_table.number_of_members={0} miembros
+my_folders_table.sync=Sinc
+my_folders_table.transfer_mode=Perfil de sincronizaci\u00F3n
+my_folders_table.total_size=Tama\u00F1o total
 
 navigationbuttons.back=Atr\u00E1s
 navigationbuttons.back_to=Atr\u00E1s a {0}
@@ -777,7 +777,7 @@ preferences.dialog.dialogs.title=Dialogos
 preferences.dialog.dialogs.warn_on_duplicate_folders=Advertir si se cambia el perfil en mas de una carpeta
 preferences.dialog.dialogs.warnoncloseifnotinsync=Advertir sobre el cierre del programa si una carpeta se esta sincronizando todavia
 preferences.dialog.dialogs.warnonlimitedconnectivity=Avisar sobre conectividad limitada (Sin conexiones entrantes)
-preferences.dialog.dialogs.warnonlowmemory=Advertir escasez de memoria
+preferences.dialog.dialogs.warnonlow_memory=Advertir escasez de memoria
 preferences.dialog.dialogs.warnonpossiblefilename_problems=Avisar sobre posibles problemas con nombres de archivo (p.ej. demasiado largos)
 preferences.dialog.dyndns=mi DNS (din\u00E1mica)
 preferences.dialog.dyndns.title=DynDNS
@@ -1275,11 +1275,11 @@ wizard.host_panel.folder_host_success=Has configurado con \u00E9xito  una carpet
 wizard.host_panel.pcsjoin=Ahora otras computadoras pueden ahora unirse a esta carpeta
 wizard.host_panel.select=Favor de elegir el directorio pare este host
 wizard.invite.selectlocaldirectory=Favor de elegir el directorio local para estos archivos.
-wizard.loadinvitation.addtofriends=Agregar {0} a amigos
-wizard.loadinvitation.choosefile=Elija el archivo invitaci\u00F3n
-wizard.loadinvitation.select=Seleccionar archivo invitaci\u00F3n
-wizard.loadinvitation.selectfile=Por favor, seleccione el archivo invitaci\u00F3n
-wizard.loadinvitation.title=Abrir invitaci\u00F3n
+wizard.load_invitation.addtofriends=Agregar {0} a amigos
+wizard.load_invitation.choosefile=Elija el archivo invitaci\u00F3n
+wizard.load_invitation.select=Seleccionar archivo invitaci\u00F3n
+wizard.load_invitation.selectfile=Por favor, seleccione el archivo invitaci\u00F3n
+wizard.load_invitation.title=Abrir invitaci\u00F3n
 wizard.login_online_storage.setup_default=Configurar la carpeta ha ser sincronizada por omisi\u00F3n.
 wizard.pfwizard.title=Asistente
 wizard.project_panel.folder_project_success=Has configurado con \u00E9xito una carpeta de proyectos\!\n
