--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -564,7 +564,7 @@ general.overwrite_all=Ecraser tout
 general.password=Mot de passe
 general.powerfolder=PowerFolder
 general.preview_folder=Pr\u00E9visualiser le dossier
-general.recyclebin=Poubelle
+general.recycle_bin=Poubelle
 general.saturday=Samedi
 general.save=Sauvegarder
 general.save.key=S
@@ -604,72 +604,72 @@ invitation_files.description=Invitations PowerFolder
 invite_received_handler.notify.message=Vous avez re\u00E7u une invitation PowerFolder de {0}.
 invite_received_handler.notify.title=Invitation re\u00E7ue
 
-limitedconnection.dont_autodetect=La limitation de connexion n'est plus d\u00E9tect\u00E9e
-limitedconnection.text=PowerFolder a d\u00E9tect\u00E9 une connexion limit\u00E9 au r\u00E9seau.\nCeci peut provenir d'un logiciel coupe-feu, d'un routeur ou du partage de fichier de Windows.\nPour comprendre le probl\u00E8me, consulter le site suivant (anglais) FAQ.\nhttp\://www.powerfolder.com
-limitedconnection.title=Connexion limit\u00E9e
+limited_connection.dont_autodetect=La limitation de connexion n'est plus d\u00E9tect\u00E9e
+limited_connection.text=PowerFolder a d\u00E9tect\u00E9 une connexion limit\u00E9 au r\u00E9seau.\nCeci peut provenir d'un logiciel coupe-feu, d'un routeur ou du partage de fichier de Windows.\nPour comprendre le probl\u00E8me, consulter le site suivant (anglais) FAQ.\nhttp\://www.powerfolder.com
+limited_connection.title=Connexion limit\u00E9e
 
-linespeed.T1=T1 1.544mbit/s \u00E9mission
-linespeed.T3=T3 43.232mbit/s \u00E9mission
-linespeed.adsl128=DSL 128Kbit \u00E9mission
-linespeed.adsl256=DSL 256Kbit \u00E9mission
-linespeed.adsl512=DSL 512Kbit \u00E9mission
-linespeed.adsl768=DSL 768Kbit \u00E9mission
-linespeed.customspeed=D\u00E9bit personnalis\u00E9
-linespeed.downloadspeed=Limite de t\u00E9l\u00E9chargement
-linespeed.isdnspeed128=ISDN 128Kbit
-linespeed.isdnspeed64=ISDN 64Kbit
-linespeed.lan10=LAN 10mbit/s \u00E9mission
-linespeed.lan100=LAN 100mbit/s \u00E9mission
-linespeed.lan1000=LAN 1000mbit/s \u00E9mission
-linespeed.unlimited=Emission illimit\u00E9e
-linespeed.uploadspeed=Limite en \u00E9mission
+line_speed.T1=T1 1.544mbit/s \u00E9mission
+line_speed.T3=T3 43.232mbit/s \u00E9mission
+line_speed.adsl128=DSL 128Kbit \u00E9mission
+line_speed.adsl256=DSL 256Kbit \u00E9mission
+line_speed.adsl512=DSL 512Kbit \u00E9mission
+line_speed.adsl768=DSL 768Kbit \u00E9mission
+line_speed.custom_speed=D\u00E9bit personnalis\u00E9
+line_speed.download_speed=Limite de t\u00E9l\u00E9chargement
+line_speed.isdn_speed128=ISDN 128Kbit
+line_speed.isdn_speed64=ISDN 64Kbit
+line_speed.lan10=LAN 10mbit/s \u00E9mission
+line_speed.lan100=LAN 100mbit/s \u00E9mission
+line_speed.lan1000=LAN 1000mbit/s \u00E9mission
+line_speed.unlimited=Emission illimit\u00E9e
+line_speed.upload_speed=Limite en \u00E9mission
 
 linktoclipboard.description=Copier un lien PowerFolder dans le presse papier, \u00E0 utiliser pour rendre disponible ce dossier et autoriser des utilisateurs \u00E0 t\u00E9l\u00E9charger ce fichier
 linktoclipboard.key=C
 linktoclipboard.name=Copier un lien PowerFolder dans le presse papier
 
-loadinvitation.title=Se connecter \u00E0 un dossier gr\u00E2ce \u00E0 une invitation
+load_invitation.title=Se connecter \u00E0 un dossier gr\u00E2ce \u00E0 une invitation
 
-lowmemory.configure_failure=PowerFolder ne peut pas utiliser d'avantage de m\u00E9moire.\nMerci de pr\u00E9venir le support de PowerFolder.
-lowmemory.configure_success=M\u00E9moire suppl\u00E9mentaire configur\u00E9e.\nRed\u00E9marrer PowerFolder manuellement pour la comptabiliser.
-lowmemory.do_nothing=Ne rien faire
-lowmemory.increase=Augmenter la m\u00E9moire
-lowmemory.text=PowerFolder d\u00E9passe la quantit\u00E9 de m\u00E9moire disponible.\n\nPowerFolder peut tenter d'augmenter la m\u00E9moire disponible.
-lowmemory.title=Manque de m\u00E9moire
+low_memory.configure_failure=PowerFolder ne peut pas utiliser d'avantage de m\u00E9moire.\nMerci de pr\u00E9venir le support de PowerFolder.
+low_memory.configure_success=M\u00E9moire suppl\u00E9mentaire configur\u00E9e.\nRed\u00E9marrer PowerFolder manuellement pour la comptabiliser.
+low_memory.do_nothing=Ne rien faire
+low_memory.increase=Augmenter la m\u00E9moire
+low_memory.text=PowerFolder d\u00E9passe la quantit\u00E9 de m\u00E9moire disponible.\n\nPowerFolder peut tenter d'augmenter la m\u00E9moire disponible.
+low_memory.title=Manque de m\u00E9moire
 
-masternode.nobody=- personne -
+master_node.nobody=- personne -
 
 member.friend=Ami(e)s
 member.non_mutual_friend=Aucune connaissance commune
-member.onlan=Connect\u00E9 sur le r\u00E9seau local
+member.on_lan=Connect\u00E9 sur le r\u00E9seau local
 member.supernode=Supernode (Internet)
 
-mirrorfolder.description=Configurer le stockage en ligne pour sauvegarder un dossier
-mirrorfolder.key=B
-mirrorfolder.name=Sauvegarder le dossier
+mirror_folder.description=Configurer le stockage en ligne pour sauvegarder un dossier
+mirror_folder.key=B
+mirror_folder.name=Sauvegarder le dossier
 
-mp3fileinfo.album=Album
-mp3fileinfo.artist=Artiste
-mp3fileinfo.bitrate=Taux de compression
-mp3fileinfo.length=Longueur
-mp3fileinfo.samplerate=Taux d'\u00E9chantillonnage
-mp3fileinfo.size=Taille
-mp3fileinfo.stereo_mono=Stereo/Mono
-mp3fileinfo.title=Titre
+mp3_file_info.album=Album
+mp3_file_info.artist=Artiste
+mp3_file_info.bit_rate=Taux de compression
+mp3_file_info.length=Longueur
+mp3_file_info.sample_rate=Taux d'\u00E9chantillonnage
+mp3_file_info.size=Taille
+mp3_file_info.stereo_mono=Stereo/Mono
+mp3_file_info.title=Titre
 
 my_folders_panel.hide_previews=Cacher les dossiers de pr\u00E9visualisation
 
-myfolderstable._total_number_of_files=Total \# de fichiers
-myfolderstable.local_size=Taille locale
-myfolderstable.members=Membres
-myfolderstable.new_files=Nouveau(x) fichier(s)
-myfolderstable.number_of_deleted_files=\# Effac\u00E9(s)
-myfolderstable.number_of_incoming_files=Entrant(s)
-myfolderstable.number_of_local_files=\# Locaux
-myfolderstable.number_of_members={0} membre(s)
-myfolderstable.sync=Sync
-myfolderstable.syncprofile=Profil de synchronisation
-myfolderstable.total_size=Taille totale
+my_folders_table._total_number_of_files=Total \# de fichiers
+my_folders_table.local_size=Taille locale
+my_folders_table.members=Membres
+my_folders_table.new_files=Nouveau(x) fichier(s)
+my_folders_table.number_of_deleted_files=\# Effac\u00E9(s)
+my_folders_table.number_of_incoming_files=Entrant(s)
+my_folders_table.number_of_local_files=\# Locaux
+my_folders_table.number_of_members={0} membre(s)
+my_folders_table.sync=Sync
+my_folders_table.transfer_mode=Profil de synchronisation
+my_folders_table.total_size=Taille totale
 
 navigationbuttons.back=Retour
 navigationbuttons.back_to=Revenir \u00E0 {0}
@@ -780,7 +780,7 @@ preferences.dialog.dialogs.title=Message
 preferences.dialog.dialogs.warn_on_duplicate_folders=Pr\u00E9venir d'un changement de profil pour plusieurs dossiers
 preferences.dialog.dialogs.warnoncloseifnotinsync=Pr\u00E9venir \u00E0 la fermeture du programme si un dossier est en cours de synchronisation
 preferences.dialog.dialogs.warnonlimitedconnectivity=Pr\u00E9venir en cas de connexion limit\u00E9e (Pas de connexion entrante)
-preferences.dialog.dialogs.warnonlowmemory=Quantiti\u00E9 de m\u00E9moire disponible faible
+preferences.dialog.dialogs.warnonlow_memory=Quantiti\u00E9 de m\u00E9moire disponible faible
 preferences.dialog.dialogs.warnonpossiblefilename_problems=Pr\u00E9venir en cas de probl\u00E8me de nom de fichier  (ex. trop long pour un autre OS)
 preferences.dialog.dyndns=DNS dynamique (dyndns)
 preferences.dialog.dyndns.title=DynDNS
@@ -1278,11 +1278,11 @@ wizard.host_panel.folder_host_success=Cr\u00E9ation d'un dossier d'h\u00E9bergem
 wizard.host_panel.pcsjoin=D'autres ordinateurs peuvent rejoindre ce dossier maintenant
 wizard.host_panel.select=Merci d'indiquer le dossier qui servira d'h\u00E9bergement
 wizard.invite.selectlocaldirectory=Merci d'indiquer le dossier local cible pour ces fichiers
-wizard.loadinvitation.addtofriends=Ajouter {0} \u00E0 la liste d'ami(e)s
-wizard.loadinvitation.choosefile=Indiquer le fichier d'invitation
-wizard.loadinvitation.select=S\u00E9lectionner le fichier d'invitation
-wizard.loadinvitation.selectfile=Merci de s\u00E9lectionner le fichier d'invitation
-wizard.loadinvitation.title=Charger l'invitation
+wizard.load_invitation.addtofriends=Ajouter {0} \u00E0 la liste d'ami(e)s
+wizard.load_invitation.choosefile=Indiquer le fichier d'invitation
+wizard.load_invitation.select=S\u00E9lectionner le fichier d'invitation
+wizard.load_invitation.selectfile=Merci de s\u00E9lectionner le fichier d'invitation
+wizard.load_invitation.title=Charger l'invitation
 wizard.login_online_storage.setup_default=Configurer le dossier de synchronisation par d\u00E9faut.
 wizard.pfwizard.title=Assistant
 wizard.project_panel.folder_project_success=Cr\u00E9ation d'un dossier de projet r\u00E9ussie\!\n
