--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -562,7 +562,7 @@ general.overwrite_all=Sovrascrivi tutto
 general.password=Password
 general.powerfolder=PowerFolder
 general.preview_folder=Cartella di Anteprima
-general.recyclebin=Cestino
+general.recycle_bin=Cestino
 general.saturday=Sabato
 general.save=Salva
 general.save.key=S
@@ -602,72 +602,72 @@ invitation_files.description=Inviti PowerFolder
 invite_received_handler.notify.message=Hai ricevuto un invito PowerFolder da {0}.
 invite_received_handler.notify.title=Invito Ricevuto
 
-limitedconnection.dont_autodetect=Connettivit\u00E0 limitata non pi\u00F9 rilevata
-limitedconnection.text=PowerFolder ha rilevato una connettivit\u00E0 limitata sulla rete.\nQuesto potrebbe essere causato da un firewall, un router o dalla condivisione di una connessione su windows.\nPer sapere come aumentare la connettivit\u00E0 leggi le nostre FAQ.\nhttp\://www.powerfolder.com
-limitedconnection.title=Connettivit\u00E0 limitata
+limited_connection.dont_autodetect=Connettivit\u00E0 limitata non pi\u00F9 rilevata
+limited_connection.text=PowerFolder ha rilevato una connettivit\u00E0 limitata sulla rete.\nQuesto potrebbe essere causato da un firewall, un router o dalla condivisione di una connessione su windows.\nPer sapere come aumentare la connettivit\u00E0 leggi le nostre FAQ.\nhttp\://www.powerfolder.com
+limited_connection.title=Connettivit\u00E0 limitata
 
-linespeed.T1=T1 (1.544mbit)
-linespeed.T3=T3 (43.232mbit)
-linespeed.adsl128=DSL 1000 (128Kbit up)
-linespeed.adsl256=DSL 2000 (256Kbit up)
-linespeed.adsl512=DSL 6000 (512Kbit up)
-linespeed.adsl768=DSL 16000 (768Kbit up)
-linespeed.customspeed=Linea dedicata
-linespeed.downloadspeed=Limite per il download
-linespeed.isdnspeed128=Dual ISDN (128Kbit up)
-linespeed.isdnspeed64=ISDN (64Kbit up)
-linespeed.lan10=LAN 10mbit/s
-linespeed.lan100=LAN 100mbit/s
-linespeed.lan1000=LAN 1000mbit/s
-linespeed.unlimited=Upload illimitato
-linespeed.uploadspeed=Limite di Upload
+line_speed.T1=T1 (1.544mbit)
+line_speed.T3=T3 (43.232mbit)
+line_speed.adsl128=DSL 1000 (128Kbit up)
+line_speed.adsl256=DSL 2000 (256Kbit up)
+line_speed.adsl512=DSL 6000 (512Kbit up)
+line_speed.adsl768=DSL 16000 (768Kbit up)
+line_speed.custom_speed=Linea dedicata
+line_speed.download_speed=Limite per il download
+line_speed.isdn_speed128=Dual ISDN (128Kbit up)
+line_speed.isdn_speed64=ISDN (64Kbit up)
+line_speed.lan10=LAN 10mbit/s
+line_speed.lan100=LAN 100mbit/s
+line_speed.lan1000=LAN 1000mbit/s
+line_speed.unlimited=Upload illimitato
+line_speed.upload_speed=Limite di Upload
 
 linktoclipboard.description=Copia un link PowerFolder negli appunti, usalo per abilitare altri utenti ad entrare nella cartella e scaricare questo file
 linktoclipboard.key=l
 linktoclipboard.name=Copia un link PowerFolder negli appunti
 
-loadinvitation.title=Accedi ad una cartella da un file di invito
+load_invitation.title=Accedi ad una cartella da un file di invito
 
-lowmemory.configure_failure=PowerFolder non \u00E8 riuscito a configurare la memoria aggiuntiva.\nContattare il Supporto PowerFolder per consigli.
-lowmemory.configure_success=Memoria aggiuntiva configurata.\nPowerFolder deve essere riavviato manualmente perch\u00E8 ci\u00F2 abbia effetto.
-lowmemory.do_nothing=Non fare nulla
-lowmemory.increase=Aumenta Memoria
-lowmemory.text=PowerFolder sta esaurendo la memoria disponibile.\n\nPowerFolder pu\u00F2 cercare di aumentare la memoria disponibile.
-lowmemory.title=Poca memoria
+low_memory.configure_failure=PowerFolder non \u00E8 riuscito a configurare la memoria aggiuntiva.\nContattare il Supporto PowerFolder per consigli.
+low_memory.configure_success=Memoria aggiuntiva configurata.\nPowerFolder deve essere riavviato manualmente perch\u00E8 ci\u00F2 abbia effetto.
+low_memory.do_nothing=Non fare nulla
+low_memory.increase=Aumenta Memoria
+low_memory.text=PowerFolder sta esaurendo la memoria disponibile.\n\nPowerFolder pu\u00F2 cercare di aumentare la memoria disponibile.
+low_memory.title=Poca memoria
 
-masternode.nobody=- nessuno -
+master_node.nobody=- nessuno -
 
 member.friend=Amico
 member.non_mutual_friend=Nessun amico reciproco
-member.onlan=Onlan
+member.on_lan=Onlan
 member.supernode=Supernodo
 
-mirrorfolder.description=Setup dell'Online Storage per fare backup di una cartella
-mirrorfolder.key=B
-mirrorfolder.name=Backup Cartella
+mirror_folder.description=Setup dell'Online Storage per fare backup di una cartella
+mirror_folder.key=B
+mirror_folder.name=Backup Cartella
 
-mp3fileinfo.album=Album
-mp3fileinfo.artist=Artista
-mp3fileinfo.bitrate=Bitrate
-mp3fileinfo.length=Lunghezza
-mp3fileinfo.samplerate=Frequenza di campionamento
-mp3fileinfo.size=Dimensione
-mp3fileinfo.stereo_mono=Stereo/Mono
-mp3fileinfo.title=Titolo
+mp3_file_info.album=Album
+mp3_file_info.artist=Artista
+mp3_file_info.bit_rate=Bitrate
+mp3_file_info.length=Lunghezza
+mp3_file_info.sample_rate=Frequenza di campionamento
+mp3_file_info.size=Dimensione
+mp3_file_info.stereo_mono=Stereo/Mono
+mp3_file_info.title=Titolo
 
 my_folders_panel.hide_previews=Nascondi cartelle di anteprima
 
-myfolderstable._total_number_of_files=File \# Totali
-myfolderstable.local_size=Dimensione locale
-myfolderstable.members=Membri
-myfolderstable.new_files=Nuovi Files
-myfolderstable.number_of_deleted_files=\# Cancellati
-myfolderstable.number_of_incoming_files=In arrivo
-myfolderstable.number_of_local_files=\# Locale
-myfolderstable.number_of_members={0} membri
-myfolderstable.sync=Sinc
-myfolderstable.syncprofile=Profilo di sincronizzazione
-myfolderstable.total_size=Dimensione totale
+my_folders_table._total_number_of_files=File \# Totali
+my_folders_table.local_size=Dimensione locale
+my_folders_table.members=Membri
+my_folders_table.new_files=Nuovi Files
+my_folders_table.number_of_deleted_files=\# Cancellati
+my_folders_table.number_of_incoming_files=In arrivo
+my_folders_table.number_of_local_files=\# Locale
+my_folders_table.number_of_members={0} membri
+my_folders_table.sync=Sinc
+my_folders_table.transfer_mode=Profilo di sincronizzazione
+my_folders_table.total_size=Dimensione totale
 
 navigationbuttons.back=Torna
 navigationbuttons.back_to=Torna a {0}
@@ -778,7 +778,7 @@ preferences.dialog.dialogs.title=Finestre
 preferences.dialog.dialogs.warn_on_duplicate_folders=Attenzione se si sta modificando il profilo per cartelle multiple
 preferences.dialog.dialogs.warnoncloseifnotinsync=Avvisa alla chiusura di un programma se la cartella sta ancora effettuando la sincronizzazione
 preferences.dialog.dialogs.warnonlimitedconnectivity=Avvisa in caso di limitata connettivit\u00E0 (Nessuna connessione in ingresso)
-preferences.dialog.dialogs.warnonlowmemory=Avvisa in caso di poca memoria
+preferences.dialog.dialogs.warnonlow_memory=Avvisa in caso di poca memoria
 preferences.dialog.dialogs.warnonpossiblefilename_problems=Avvisa di possibili problemi sui nomi dei file (ad es. troppo lunghi per Apple classico)
 preferences.dialog.dyndns=Mio DNS (dinamico)
 preferences.dialog.dyndns.title=DynDNS
@@ -1276,11 +1276,11 @@ wizard.host_panel.folder_host_success=Hai impostato correttamente una cartella d
 wizard.host_panel.pcsjoin=Ora gli altri computer possono unirsi a questa cartella
 wizard.host_panel.select=Si prega di selezionare la directory per l'host
 wizard.invite.selectlocaldirectory=Si prega di selezionare la directory locale per questi file
-wizard.loadinvitation.addtofriends=Aggiungi {0} agli amici
-wizard.loadinvitation.choosefile=Scegli il file dell'invito
-wizard.loadinvitation.select=Scegli il file dell'invito
-wizard.loadinvitation.selectfile=Scegli il file dell'invito
-wizard.loadinvitation.title=Carica un invito
+wizard.load_invitation.addtofriends=Aggiungi {0} agli amici
+wizard.load_invitation.choosefile=Scegli il file dell'invito
+wizard.load_invitation.select=Scegli il file dell'invito
+wizard.load_invitation.selectfile=Scegli il file dell'invito
+wizard.load_invitation.title=Carica un invito
 wizard.login_online_storage.setup_default=Impostazioni di default della cartella sincronizzata.
 wizard.pfwizard.title=Wizard
 wizard.project_panel.folder_project_success=Avete impostato correttamente la cartella per il progetto\!\n
