--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -562,7 +562,7 @@ general.overwrite_all=Overschrijf alle
 ##general.password=Password
 general.powerfolder=PowerFolder
 ##general.preview_folder=Preview folder
-general.recyclebin=Prullenbak
+general.recycle_bin=Prullenbak
 ##general.saturday=Saturday
 ##general.save=Save
 ##general.save.key=S
@@ -602,72 +602,72 @@ invitation_files.description=PowerFolder uitnodigingen
 ##invite_received_handler.notify.message=You have received a PowerFolder invitation from {0}.
 ##invite_received_handler.notify.title=Invitation Received
 
-limitedconnection.dont_autodetect=Stop met detecteren van gelimiteerde verbinding
-limitedconnection.text=PowerFolder heeft gelimiteerde verbinding naar het netwerk gedetecteerd.\nDit kan worden veroorzaakt door een firewall, router of "delen van bestanden met Windows".\nLees de FAQ om de verbindingen te verbeteren.\nhttp\://www.powerfolder.com
-limitedconnection.title=Beperkte connectie
+limited_connection.dont_autodetect=Stop met detecteren van gelimiteerde verbinding
+limited_connection.text=PowerFolder heeft gelimiteerde verbinding naar het netwerk gedetecteerd.\nDit kan worden veroorzaakt door een firewall, router of "delen van bestanden met Windows".\nLees de FAQ om de verbindingen te verbeteren.\nhttp\://www.powerfolder.com
+limited_connection.title=Beperkte connectie
 
-linespeed.T1=T1 (1.544mbit)
-linespeed.T3=T3 (43.232mbit)
-linespeed.adsl128=DSL 1000 (128Kbit up)
-linespeed.adsl256=DSL 2000 (256Kbit up)
-linespeed.adsl512=DSL 6000 (512Kbit up)
-linespeed.adsl768=DSL 16000 (768Kbit up)
-linespeed.customspeed=Kies upload
-linespeed.downloadspeed=Download limiet
-linespeed.isdnspeed128=Dual ISDN (128Kbit up)
-linespeed.isdnspeed64=ISDN (64Kbit up)
-linespeed.lan10=LAN 10mbit/s
-linespeed.lan100=LAN 100mbit/s 
-linespeed.lan1000=LAN 1000mbit/s
-linespeed.unlimited=Unlimited upload
-linespeed.uploadspeed=Upload limiet
+line_speed.T1=T1 (1.544mbit)
+line_speed.T3=T3 (43.232mbit)
+line_speed.adsl128=DSL 1000 (128Kbit up)
+line_speed.adsl256=DSL 2000 (256Kbit up)
+line_speed.adsl512=DSL 6000 (512Kbit up)
+line_speed.adsl768=DSL 16000 (768Kbit up)
+line_speed.custom_speed=Kies upload
+line_speed.download_speed=Download limiet
+line_speed.isdn_speed128=Dual ISDN (128Kbit up)
+line_speed.isdn_speed64=ISDN (64Kbit up)
+line_speed.lan10=LAN 10mbit/s
+line_speed.lan100=LAN 100mbit/s
+line_speed.lan1000=LAN 1000mbit/s
+line_speed.unlimited=Unlimited upload
+line_speed.upload_speed=Upload limiet
 
 linktoclipboard.description=Kopieert een klikbare PowerFolder-link naar het klembord, gebruik dit zodat anderen lid kunnen worden van deze folder en dit bestand kunnen downloaden
 linktoclipboard.key=K
 linktoclipboard.name=Kopieer PowerFolder link naar Klembord 
 
-loadinvitation.title=Wordt lid van een folder met behulp van een invitatiebestand
+load_invitation.title=Wordt lid van een folder met behulp van een invitatiebestand
 
-##lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
-##lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
-##lowmemory.do_nothing=Do Nothing
-##lowmemory.increase=Increase Memory
-##lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
-##lowmemory.title=Low memory
+##low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
+##low_memory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
+##low_memory.do_nothing=Do Nothing
+##low_memory.increase=Increase Memory
+##low_memory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
+##low_memory.title=Low memory
 
-masternode.nobody=- niemand -  
+master_node.nobody=- niemand -
 
 member.friend=Vriend
 member.non_mutual_friend=Niet wederzijdse vriend
-member.onlan=Lokaal
+member.on_lan=Lokaal
 member.supernode=Supernode
 
-##mirrorfolder.description=Setup the Online Storage to backup a folder
-mirrorfolder.key=B
-mirrorfolder.name=Backup Folder
+##mirror_folder.description=Setup the Online Storage to backup a folder
+mirror_folder.key=B
+mirror_folder.name=Backup Folder
 
-mp3fileinfo.album=Album
-mp3fileinfo.artist=Artiest
-mp3fileinfo.bitrate=Bitrate
-mp3fileinfo.length=Lengte
-mp3fileinfo.samplerate=Samplerate
-mp3fileinfo.size=Grootte
-mp3fileinfo.stereo_mono=Stereo/Mono
-mp3fileinfo.title=Titel
+mp3_file_info.album=Album
+mp3_file_info.artist=Artiest
+mp3_file_info.bit_rate=Bitrate
+mp3_file_info.length=Lengte
+mp3_file_info.sample_rate=Samplerate
+mp3_file_info.size=Grootte
+mp3_file_info.stereo_mono=Stereo/Mono
+mp3_file_info.title=Titel
 
 ##my_folders_panel.hide_previews=Hide preview folders
 
-myfolderstable._total_number_of_files=Totaal \# bestanden
-myfolderstable.local_size=Lokale grootte
-myfolderstable.members=Leden
-##myfolderstable.new_files=New Files
-myfolderstable.number_of_deleted_files=\#Verwijderd
-##myfolderstable.number_of_incoming_files=Incoming
-myfolderstable.number_of_local_files=\#Lokaal
-myfolderstable.number_of_members={0} leden
-myfolderstable.sync=Sync
-myfolderstable.syncprofile=Sync Profiel
-myfolderstable.total_size=Lokale grote
+my_folders_table._total_number_of_files=Totaal \# bestanden
+my_folders_table.local_size=Lokale grootte
+my_folders_table.members=Leden
+##my_folders_table.new_files=New Files
+my_folders_table.number_of_deleted_files=\#Verwijderd
+##my_folders_table.number_of_incoming_files=Incoming
+my_folders_table.number_of_local_files=\#Lokaal
+my_folders_table.number_of_members={0} leden
+my_folders_table.sync=Sync
+my_folders_table.transfer_mode=Sync Profiel
+my_folders_table.total_size=Lokale grote
 
 navigationbuttons.back=Terug
 navigationbuttons.back_to=Terug naar {0}
@@ -778,7 +778,7 @@ preferences.dialog.dialogs.title=Dialogen
 ##preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a profile for multiple folders
 preferences.dialog.dialogs.warnoncloseifnotinsync=Waarschuw bij sluiten van programma als folder nog aan het synchronizeren is
 preferences.dialog.dialogs.warnonlimitedconnectivity=Waarschuw bij gelimiteerde verbinding (Geen binnenkomende verbindingen)
-##preferences.dialog.dialogs.warnonlowmemory=Warn on low available memory
+##preferences.dialog.dialogs.warnonlow_memory=Warn on low available memory
 preferences.dialog.dialogs.warnonpossiblefilename_problems=Waarschuw bij mogelijke bestandsnaam problemen (b.v. te lang voor "Apple Classic")
 preferences.dialog.dyndns=Mijn - dynamic - DNS
 preferences.dialog.dyndns.title=DynDNS
@@ -1276,11 +1276,11 @@ wizard.filesharing.sharedsuccess=Folder wordt nu gedeeld\!\nAndere gebruikers ku
 ##wizard.host_panel.pcsjoin=Other computers can join this folder now
 ##wizard.host_panel.select=Please select the directory which should be the host
 ##wizard.invite.selectlocaldirectory=Please select local target directory for the files
-wizard.loadinvitation.addtofriends=Voeg {0} toe aan vrienden
-wizard.loadinvitation.choosefile=Kies een invitatie bestand
-wizard.loadinvitation.select=Selecteer een invitatie bestand
-wizard.loadinvitation.selectfile=Selecteer een invitatie bestand
-wizard.loadinvitation.title=Open een invitatie
+wizard.load_invitation.addtofriends=Voeg {0} toe aan vrienden
+wizard.load_invitation.choosefile=Kies een invitatie bestand
+wizard.load_invitation.select=Selecteer een invitatie bestand
+wizard.load_invitation.selectfile=Selecteer een invitatie bestand
+wizard.load_invitation.title=Open een invitatie
 ##wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.pfwizard.title=Wizard
 ##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
