--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -562,7 +562,7 @@ general.overwrite_all=Nadpisz wszystko
 ##general.password=Password
 general.powerfolder=PowerFolder
 ##general.preview_folder=Preview folder
-general.recyclebin=Kosz
+general.recycle_bin=Kosz
 general.saturday=Sobota
 ##general.save=Save
 ##general.save.key=S
@@ -602,72 +602,72 @@ invitation_files.description=Zaproszenia PowerFolder
 ##invite_received_handler.notify.message=You have received a PowerFolder invitation from {0}.
 ##invite_received_handler.notify.title=Invitation Received
 
-limitedconnection.dont_autodetect=Nie wykrywaj ograniczonego po\u0142\u0105czenia
-limitedconnection.text=PowerFolder wykry\u0142 ograniczenie po\u0142\u0105czenia z sieci\u0105.\nMo\u017ce by\u0107 to spowodowane przez firewall, router lub system Windows.\nW dokumentacji jest opisane, jak mo\u017cesz poprawi\u0107 po\u0142\u0105czenie.\nhttp\://docs.powerfolder.com
-limitedconnection.title=Ograniczone po\u0142\u0105czenie
+limited_connection.dont_autodetect=Nie wykrywaj ograniczonego po\u0142\u0105czenia
+limited_connection.text=PowerFolder wykry\u0142 ograniczenie po\u0142\u0105czenia z sieci\u0105.\nMo\u017ce by\u0107 to spowodowane przez firewall, router lub system Windows.\nW dokumentacji jest opisane, jak mo\u017cesz poprawi\u0107 po\u0142\u0105czenie.\nhttp\://docs.powerfolder.com
+limited_connection.title=Ograniczone po\u0142\u0105czenie
 
-linespeed.T1=T1 (1.544mbit)
-linespeed.T3=T3 (43.232mbit)
-linespeed.adsl128=DSL 1000 (128Kbit up)
-linespeed.adsl256=DSL 2000 (256Kbit up)
-linespeed.adsl512=DSL 6000 (512Kbit up)
-linespeed.adsl768=DSL 16000 (768Kbit up)
-linespeed.customspeed=W\u0142asny
-linespeed.downloadspeed=Limit pobierania
-linespeed.isdnspeed128=Dual ISDN (128Kbit up)
-linespeed.isdnspeed64=ISDN (64Kbit up)
-linespeed.lan10=LAN 10mbit/s
-linespeed.lan100=LAN 100mbit/s
-linespeed.lan1000=LAN 1000mbit/s
-linespeed.unlimited=Bez limitu
-linespeed.uploadspeed=Limit wysy\u0142ania
+line_speed.T1=T1 (1.544mbit)
+line_speed.T3=T3 (43.232mbit)
+line_speed.adsl128=DSL 1000 (128Kbit up)
+line_speed.adsl256=DSL 2000 (256Kbit up)
+line_speed.adsl512=DSL 6000 (512Kbit up)
+line_speed.adsl768=DSL 16000 (768Kbit up)
+line_speed.custom_speed=W\u0142asny
+line_speed.download_speed=Limit pobierania
+line_speed.isdn_speed128=Dual ISDN (128Kbit up)
+line_speed.isdn_speed64=ISDN (64Kbit up)
+line_speed.lan10=LAN 10mbit/s
+line_speed.lan100=LAN 100mbit/s
+line_speed.lan1000=LAN 1000mbit/s
+line_speed.unlimited=Bez limitu
+line_speed.upload_speed=Limit wysy\u0142ania
 
 linktoclipboard.description=Kopiuje link PowerFolder do Schowka. U\u017cywany, aby umo\u017cliwi\u0107 innym przy\u0142\u0105czenie si\u0119 do tego folderu i pobranie pliku
 linktoclipboard.key=c
 linktoclipboard.name=Kopiuj link PowerFolder do Schowka
 
-loadinvitation.title=Przy\u0142\u0105cz si\u0119 do folderu za pomoc\u0105 pliku zaproszenia
+load_invitation.title=Przy\u0142\u0105cz si\u0119 do folderu za pomoc\u0105 pliku zaproszenia
 
-lowmemory.configure_failure=PowerFolder nie by\u0142 w stanie skonfigurowa\u0107 dodatkowej pami\u0119ci.\nProsimy o kontakt z Wsparciem Technicznym PowerFolder, aby uzyska\u0107 pomoc.
-lowmemory.configure_success=Dodatkowa pami\u0119\u0107 zosta\u0142a poprawnie skonfigurowana.\nPowerFolder musi zosta\u0107 r\u0119cznie uruchomiony ponownie, aby zmiany odnios\u0142y skutek.
-lowmemory.do_nothing=Nic nie r\u00f3b
-lowmemory.increase=Zwi\u0119ksz Pami\u0119\u0107
-lowmemory.text=Programowi PowerFolder zaczyna brakowa\u0107 pami\u0119ci.\n\nPowerFolder mo\u017ce zwiekszy\u0107 poziom dost\u0119pnej pami\u0119ci.
-lowmemory.title=Ma\u0142o pami\u0119ci
+low_memory.configure_failure=PowerFolder nie by\u0142 w stanie skonfigurowa\u0107 dodatkowej pami\u0119ci.\nProsimy o kontakt z Wsparciem Technicznym PowerFolder, aby uzyska\u0107 pomoc.
+low_memory.configure_success=Dodatkowa pami\u0119\u0107 zosta\u0142a poprawnie skonfigurowana.\nPowerFolder musi zosta\u0107 r\u0119cznie uruchomiony ponownie, aby zmiany odnios\u0142y skutek.
+low_memory.do_nothing=Nic nie r\u00f3b
+low_memory.increase=Zwi\u0119ksz Pami\u0119\u0107
+low_memory.text=Programowi PowerFolder zaczyna brakowa\u0107 pami\u0119ci.\n\nPowerFolder mo\u017ce zwiekszy\u0107 poziom dost\u0119pnej pami\u0119ci.
+low_memory.title=Ma\u0142o pami\u0119ci
 
-masternode.nobody=- nobody -
+master_node.nobody=- nobody -
 
 member.friend=Znajomy
 member.non_mutual_friend=Nie ma Ci\u0119 na li\u015bcie znajomych
-member.onlan=Onlan
+member.on_lan=Onlan
 member.supernode=G\u0142\u00f3wny w\u0119ze\u0142
 
-mirrorfolder.description=Skonfiguruj Archiwum Online, aby stworzy\u0107 kopi\u0119 zapasow\u0105 folderu
-mirrorfolder.key=B
-mirrorfolder.name=Stw\u00f3rz kopi\u0119 zapasow\u0105 folderu
+mirror_folder.description=Skonfiguruj Archiwum Online, aby stworzy\u0107 kopi\u0119 zapasow\u0105 folderu
+mirror_folder.key=B
+mirror_folder.name=Stw\u00f3rz kopi\u0119 zapasow\u0105 folderu
 
-mp3fileinfo.album=Album
-mp3fileinfo.artist=Artysta
-mp3fileinfo.bitrate=Bitrate
-mp3fileinfo.length=D\u0142ugo\u015b\u0107
-mp3fileinfo.samplerate=Samplerate
-mp3fileinfo.size=Rozmiar
-mp3fileinfo.stereo_mono=Stereo/Mono
-mp3fileinfo.title=Tytu\u0142
+mp3_file_info.album=Album
+mp3_file_info.artist=Artysta
+mp3_file_info.bit_rate=Bitrate
+mp3_file_info.length=D\u0142ugo\u015b\u0107
+mp3_file_info.sample_rate=Samplerate
+mp3_file_info.size=Rozmiar
+mp3_file_info.stereo_mono=Stereo/Mono
+mp3_file_info.title=Tytu\u0142
 
 ##my_folders_panel.hide_previews=Hide preview folders
 
-myfolderstable._total_number_of_files=W sumie plik\u00f3w\: \#
-myfolderstable.local_size=Lokalny Rozmiar
-myfolderstable.members=Cz\u0142onkowie
-##myfolderstable.new_files=New Files
-myfolderstable.number_of_deleted_files=Usuni\u0119tych\: \#
-##myfolderstable.number_of_incoming_files=Incoming
-myfolderstable.number_of_local_files=Lokalne\: \#
-myfolderstable.number_of_members={0} cz\u0142onk\u00f3w
-myfolderstable.sync=Synchronizacja
-myfolderstable.syncprofile=Profil synchronizacji
-myfolderstable.total_size=Ca\u0142kowity Rozmiar
+my_folders_table._total_number_of_files=W sumie plik\u00f3w\: \#
+my_folders_table.local_size=Lokalny Rozmiar
+my_folders_table.members=Cz\u0142onkowie
+##my_folders_table.new_files=New Files
+my_folders_table.number_of_deleted_files=Usuni\u0119tych\: \#
+##my_folders_table.number_of_incoming_files=Incoming
+my_folders_table.number_of_local_files=Lokalne\: \#
+my_folders_table.number_of_members={0} cz\u0142onk\u00f3w
+my_folders_table.sync=Synchronizacja
+my_folders_table.transfer_mode=Profil synchronizacji
+my_folders_table.total_size=Ca\u0142kowity Rozmiar
 
 navigationbuttons.back=Wstecz
 navigationbuttons.back_to=Wstecz do {0}
@@ -778,7 +778,7 @@ preferences.dialog.dialogs.title=Okna dialogowe
 ##preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a profile for multiple folders
 preferences.dialog.dialogs.warnoncloseifnotinsync=Ostrzegaj przed zamkni\u0119ciem programu, je\u015bli folder jest w trakcie synchronizacji
 preferences.dialog.dialogs.warnonlimitedconnectivity=Ostrzegaj przed ograniczon\u0105 liczb\u0105 po\u0142\u0105cze\u0144 (Brak po\u0142\u0105cze\u0144 przychodz\u0105cych)
-preferences.dialog.dialogs.warnonlowmemory=Ostrzegaj przed ma\u0142\u0105 ilo\u015bci\u0105 dost\u0119pnej pami\u0119ci
+preferences.dialog.dialogs.warnonlow_memory=Ostrzegaj przed ma\u0142\u0105 ilo\u015bci\u0105 dost\u0119pnej pami\u0119ci
 preferences.dialog.dialogs.warnonpossiblefilename_problems=Ostrzegaj przed mo\u017cliwymi problemami z nazwami plik\u00f3w (np. za d\u0142ugie dla Apple classic)
 preferences.dialog.dyndns=M\u00f3j (dynamiczny) DNS
 preferences.dialog.dyndns.title=DynDNS
@@ -1276,11 +1276,11 @@ wizard.filesharing.sharedsuccess=Pomy\u015blnie skonfigurowano folder wsp\u00f3\
 ##wizard.host_panel.pcsjoin=Other computers can join this folder now
 ##wizard.host_panel.select=Please select the directory which should be the host
 ##wizard.invite.selectlocaldirectory=Please select local target directory for the files
-wizard.loadinvitation.addtofriends=Dodano {0} do znajomych
-wizard.loadinvitation.choosefile=Wybierz plik zaproszenia
-wizard.loadinvitation.select=Wybierz plik zaproszenia
-wizard.loadinvitation.selectfile=Prosz\u0119 wybra\u0107 plik zaproszenia
-wizard.loadinvitation.title=Wczytaj zaproszenie
+wizard.load_invitation.addtofriends=Dodano {0} do znajomych
+wizard.load_invitation.choosefile=Wybierz plik zaproszenia
+wizard.load_invitation.select=Wybierz plik zaproszenia
+wizard.load_invitation.selectfile=Prosz\u0119 wybra\u0107 plik zaproszenia
+wizard.load_invitation.title=Wczytaj zaproszenie
 ##wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.pfwizard.title=Kreator
 ##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
