--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -494,7 +494,7 @@ general.overwrite=Substituir
 general.overwrite_all=Substituir todos
 general.powerfolder=PowerFolder
 general.preview_folder=Pr\u00e9-visualizar
-general.recyclebin=Lixeira
+general.recycle_bin=Lixeira
 general.reject=Rejeitar
 general.saturday=S\u00e1bado
 general.seconds=Segundo(s)
@@ -533,69 +533,69 @@ invitation.utils.unable.write.title=N\u00e3o \u00e9 poss\u00edvel realizar o con
 
 invitation_files.description=Convites da pasta PowerFolder 
 
-limitedconnection.dont_autodetect=N\u00e3o detectar conex\u00e3o limitada
-limitedconnection.text=PowerFolder detectou conex\u00e3o limitada \u00e0 rede.\nIsto pode ser causado pela firewall, roteador ou uma conex\u00e3o compartilhada do windows.\nA documenta\u00e7\u00e3o prov\u00ea informa\u00e7\u00f5es em como melhorar a conex\u00e3o.\nhttp\://docs.powerfolder.com
-limitedconnection.title=Conectividade limitada
+limited_connection.dont_autodetect=N\u00e3o detectar conex\u00e3o limitada
+limited_connection.text=PowerFolder detectou conex\u00e3o limitada \u00e0 rede.\nIsto pode ser causado pela firewall, roteador ou uma conex\u00e3o compartilhada do windows.\nA documenta\u00e7\u00e3o prov\u00ea informa\u00e7\u00f5es em como melhorar a conex\u00e3o.\nhttp\://docs.powerfolder.com
+limited_connection.title=Conectividade limitada
 
-linespeed.T1=T1 (1.544mbit)
-linespeed.T3=T3 (43.232mbit)
-linespeed.adsl128=DSL 1000 (128Kbit up)
-linespeed.adsl256=DSL 2000 (256Kbit up)
-linespeed.adsl512=DSL 6000 (512Kbit up)
-linespeed.adsl768=DSL 16000 (768Kbit up)
-linespeed.customspeed=Linha personalizada
-linespeed.downloadspeed=Limite para Baixas
-linespeed.isdnspeed128=Dual ISDN (128Kbit up)
-linespeed.isdnspeed64=ISDN (64Kbit up)
-linespeed.lan10=Rede local (LAN) 10mbit/s
-linespeed.lan100=Rede local (LAN) 100mbit/s
-linespeed.lan1000=Rede local (LAN) 1000mbit/s
-linespeed.unlimited=Ilimitado
-linespeed.uploadspeed=Limite para Envios
+line_speed.T1=T1 (1.544mbit)
+line_speed.T3=T3 (43.232mbit)
+line_speed.adsl128=DSL 1000 (128Kbit up)
+line_speed.adsl256=DSL 2000 (256Kbit up)
+line_speed.adsl512=DSL 6000 (512Kbit up)
+line_speed.adsl768=DSL 16000 (768Kbit up)
+line_speed.custom_speed=Linha personalizada
+line_speed.download_speed=Limite para Baixas
+line_speed.isdn_speed128=Dual ISDN (128Kbit up)
+line_speed.isdn_speed64=ISDN (64Kbit up)
+line_speed.lan10=Rede local (LAN) 10mbit/s
+line_speed.lan100=Rede local (LAN) 100mbit/s
+line_speed.lan1000=Rede local (LAN) 1000mbit/s
+line_speed.unlimited=Ilimitado
+line_speed.upload_speed=Limite para Envios
 
 linktoclipboard.description=Copia um link selecion\u00e1vel do Powerfolder para a \u00e1rea de transfer\u00eancia, usado para permitir que pessoas possam juntar-se a esta pasta e baixar este arquivo
 linktoclipboard.key=c
 linktoclipboard.name=Copiar link do PowerFolder para a \u00c1rea de trabalho
 
-loadinvitation.title=Juntar-se a uma pasta a partir de um arquivo de convites
+load_invitation.title=Juntar-se a uma pasta a partir de um arquivo de convites
 
-lowmemory.configure_failure=PowerFolder n\u00e3o conseguiu configurar mais mem\u00f3ria.\nPor favor contate o grupo de suporte do PowerFolder para receber sugest\u00f5es.
-lowmemory.configure_success=Configura\u00e7\u00e3o de mem\u00f3ria adicional bem sucedida.\nPara que a mem\u00f3ria adicional seja reconhecida PowerFolder deve ser reiniciado manualmente.
-lowmemory.do_nothing=Nenhuma a\u00e7\u00e3o
-lowmemory.increase=Aumentar Mem\u00f3ria
-lowmemory.text=PowerFolder est\u00e1 executando com pouca mem\u00f3ria.\n\nPowerFolder pode tentar aumentar a mem\u00f3ria dispon\u00edvel.
-lowmemory.title=Pouca mem\u00f3ria
+low_memory.configure_failure=PowerFolder n\u00e3o conseguiu configurar mais mem\u00f3ria.\nPor favor contate o grupo de suporte do PowerFolder para receber sugest\u00f5es.
+low_memory.configure_success=Configura\u00e7\u00e3o de mem\u00f3ria adicional bem sucedida.\nPara que a mem\u00f3ria adicional seja reconhecida PowerFolder deve ser reiniciado manualmente.
+low_memory.do_nothing=Nenhuma a\u00e7\u00e3o
+low_memory.increase=Aumentar Mem\u00f3ria
+low_memory.text=PowerFolder est\u00e1 executando com pouca mem\u00f3ria.\n\nPowerFolder pode tentar aumentar a mem\u00f3ria dispon\u00edvel.
+low_memory.title=Pouca mem\u00f3ria
 
-masternode.nobody=- ningu\u00e9m -
+master_node.nobody=- ningu\u00e9m -
 
 member.friend=Amigo
 member.non_mutual_friend=Nenhum amigo comum
-member.onlan=Na Rede Local (LAN)
+member.on_lan=Na Rede Local (LAN)
 member.supernode=Super-n\u00f3
 
-mirrorfolder.description=Configurar o Armezenamento Online para fazer backup de uma pasta
-mirrorfolder.key=B
-mirrorfolder.name=Backup pasta
+mirror_folder.description=Configurar o Armezenamento Online para fazer backup de uma pasta
+mirror_folder.key=B
+mirror_folder.name=Backup pasta
 
-mp3fileinfo.album=Album
-mp3fileinfo.artist=Artista
-mp3fileinfo.bitrate=Taxa de transfer\u00eanica (em bits)
-mp3fileinfo.length=Dura\u00e7\u00e3o
-mp3fileinfo.samplerate=Taxa de amostragem (Sample rate)
-mp3fileinfo.size=Tamanho
-mp3fileinfo.stereo_mono=Stereo/Mono
-mp3fileinfo.title=T\u00edtulo
+mp3_file_info.album=Album
+mp3_file_info.artist=Artista
+mp3_file_info.bit_rate=Taxa de transfer\u00eanica (em bits)
+mp3_file_info.length=Dura\u00e7\u00e3o
+mp3_file_info.sample_rate=Taxa de amostragem (Sample rate)
+mp3_file_info.size=Tamanho
+mp3_file_info.stereo_mono=Stereo/Mono
+mp3_file_info.title=T\u00edtulo
 
-myfolderstable._total_number_of_files=Total de arquivos
-myfolderstable.local_size=Tamanho Local
-myfolderstable.members=Membros
-myfolderstable.number_of_available_files=Num. Dispon\u00edvel
-myfolderstable.number_of_deleted_files=Num. Apagado
-myfolderstable.number_of_local_files=Total Arquivos Locais
-myfolderstable.number_of_members={0} membros
-myfolderstable.sync=Sincronizar
-myfolderstable.syncprofile=Perfil de Sincroniza\u00e7\u00e3o
-myfolderstable.total_size=Tamanho Total
+my_folders_table._total_number_of_files=Total de arquivos
+my_folders_table.local_size=Tamanho Local
+my_folders_table.members=Membros
+my_folders_table.number_of_available_files=Num. Dispon\u00edvel
+my_folders_table.number_of_deleted_files=Num. Apagado
+my_folders_table.number_of_local_files=Total Arquivos Locais
+my_folders_table.number_of_members={0} membros
+my_folders_table.sync=Sincronizar
+my_folders_table.transfer_mode=Perfil de Sincroniza\u00e7\u00e3o
+my_folders_table.total_size=Tamanho Total
 
 navigationbuttons.back=Voltar
 navigationbuttons.back_to=Voltar para {0}
@@ -694,7 +694,7 @@ preferences.dialog.dialogs.check_for_program_updates=Verificar se h\u00e1 atuali
 preferences.dialog.dialogs.title=Di\u00e1logos
 preferences.dialog.dialogs.warnoncloseifnotinsync=No fechamento, avisar se uma pasta ainda estiver sincronizando
 preferences.dialog.dialogs.warnonlimitedconnectivity=Avisar sobre conectividade limitada (Sem conex\u00f5es de entrada)
-preferences.dialog.dialogs.warnonlowmemory=Avisar sobre mem\u00f3ria baixa
+preferences.dialog.dialogs.warnonlow_memory=Avisar sobre mem\u00f3ria baixa
 preferences.dialog.dialogs.warnonpossiblefilename_problems=Avisar sobre poss\u00edvel problema com nomes de arquivos (por exemplo, muito longo para Apple classic)
 preferences.dialog.dyndns=Meu DNS (din\u00e2mico)
 preferences.dialog.dyndns.title=DynDNS
@@ -1110,11 +1110,11 @@ wizard.host_panel.pcsjoin=Outros computadores j\u00e1 podem associar-se a esta p
 wizard.host_panel.select=Por favor selecione o diret\u00f3rio para ser o hospedeiro
 wizard.invite.selectlocaldirectory=Por favor selecione o diret\u00f3rio local de destino para os arquivos
 wizard.key=w
-wizard.loadinvitation.addtofriends=Adicionar {0} em amigos
-wizard.loadinvitation.choosefile=Escolher o arquivo de convite
-wizard.loadinvitation.select=Selecionar arquivo de convite
-wizard.loadinvitation.selectfile=Por favor selecione arquivo de convite
-wizard.loadinvitation.title=Carregar convite
+wizard.load_invitation.addtofriends=Adicionar {0} em amigos
+wizard.load_invitation.choosefile=Escolher o arquivo de convite
+wizard.load_invitation.select=Selecionar arquivo de convite
+wizard.load_invitation.selectfile=Por favor selecione arquivo de convite
+wizard.load_invitation.title=Carregar convite
 wizard.name=Assistente
 wizard.pfwizard.title=Assistente
 wizard.project_panel.folder_project_success=Voc\u00ea configurou a pasta do projeto com sucesso\!\n
