--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -562,7 +562,7 @@ general.overwrite_all=Skriv \u00f6ver alla
 ##general.password=Password
 general.powerfolder=PowerFolder
 ##general.preview_folder=Preview folder
-general.recyclebin=Papperskorg 
+general.recycle_bin=Papperskorg
 ##general.saturday=Saturday
 ##general.save=Save
 ##general.save.key=S
@@ -602,72 +602,72 @@ invitation_files.description=PowerFolder inbjudningar
 ##invite_received_handler.notify.message=You have received a PowerFolder invitation from {0}.
 ##invite_received_handler.notify.title=Invitation Received
 
-##limitedconnection.dont_autodetect=No longer detect limited connectivity
-limitedconnection.text=PowerFolder har uppt\u00e4ckt begr\u00e4nsad kvalitet i kontakten med n\u00e4tverket.\nDetta kan vara orsakat av en brandv\u00e4gg, router eller Windows anslutning.\nHur du kan f\u00f6rb\u00e4ttra kvaliteten p\u00e5 din anslutning finns beskrivet i v\u00e5r dokumentation.\nSe\: http\://docs.powerfolder.com
-limitedconnection.title=Begr\u00e4nsad n\u00e4tverkskontakt
+##limited_connection.dont_autodetect=No longer detect limited connectivity
+limited_connection.text=PowerFolder har uppt\u00e4ckt begr\u00e4nsad kvalitet i kontakten med n\u00e4tverket.\nDetta kan vara orsakat av en brandv\u00e4gg, router eller Windows anslutning.\nHur du kan f\u00f6rb\u00e4ttra kvaliteten p\u00e5 din anslutning finns beskrivet i v\u00e5r dokumentation.\nSe\: http\://docs.powerfolder.com
+limited_connection.title=Begr\u00e4nsad n\u00e4tverkskontakt
 
-linespeed.T1=T1 1.544Mbit/s
-linespeed.T3=T3 43.232Mbit/s
-linespeed.adsl128=DSL 128Kbit/s
-linespeed.adsl256=DSL 256Kbit/s
-linespeed.adsl512=DSL 512Kbit/s
-linespeed.adsl768=DSL 768Kbit/s
-linespeed.customspeed=Anpassad
-linespeed.downloadspeed=Nedladdning, Max bandbredd
-linespeed.isdnspeed128=Dual ISDN 128Kbit/s
-linespeed.isdnspeed64=ISDN 64Kbit
-linespeed.lan10=LAN 10Mbit/s
-linespeed.lan100=LAN 100Mbit/s 
-linespeed.lan1000=LAN 1000Mbit/s
-linespeed.unlimited=Obegr\u00e4nsad
-linespeed.uploadspeed=Uppladdning, Max bandbredd
+line_speed.T1=T1 1.544Mbit/s
+line_speed.T3=T3 43.232Mbit/s
+line_speed.adsl128=DSL 128Kbit/s
+line_speed.adsl256=DSL 256Kbit/s
+line_speed.adsl512=DSL 512Kbit/s
+line_speed.adsl768=DSL 768Kbit/s
+line_speed.custom_speed=Anpassad
+line_speed.download_speed=Nedladdning, Max bandbredd
+line_speed.isdn_speed128=Dual ISDN 128Kbit/s
+line_speed.isdn_speed64=ISDN 64Kbit
+line_speed.lan10=LAN 10Mbit/s
+line_speed.lan100=LAN 100Mbit/s
+line_speed.lan1000=LAN 1000Mbit/s
+line_speed.unlimited=Obegr\u00e4nsad
+line_speed.upload_speed=Uppladdning, Max bandbredd
 
 linktoclipboard.description=Kopierar en klickbar PowerFolder l\u00e4nk till klippbordet. Anv\u00e4nds f\u00f6r att l\u00e5ta n\u00e5gon g\u00e5 med i denna folder och ladda ner denna filen
 linktoclipboard.key=K
 linktoclipboard.name=Kopiera PowerFolder l\u00e4nk till klippbordet
 
-loadinvitation.title=G\u00e5 med i en folder med hj\u00e4lp av en inbjudningsfil
+load_invitation.title=G\u00e5 med i en folder med hj\u00e4lp av en inbjudningsfil
 
-##lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
-##lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
-##lowmemory.do_nothing=Do Nothing
-##lowmemory.increase=Increase Memory
-##lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
-##lowmemory.title=Low memory
+##low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
+##low_memory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
+##low_memory.do_nothing=Do Nothing
+##low_memory.increase=Increase Memory
+##low_memory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
+##low_memory.title=Low memory
 
-masternode.nobody=- ingen -
+master_node.nobody=- ingen -
 
 member.friend=V\u00e4n
 member.non_mutual_friend=Ingen gemensam v\u00e4n
-member.onlan=P\u00e5 LAN
+member.on_lan=P\u00e5 LAN
 member.supernode=Supernode
 
-##mirrorfolder.description=Setup the Online Storage to backup a folder
-##mirrorfolder.key=B
-##mirrorfolder.name=Backup Folder
+##mirror_folder.description=Setup the Online Storage to backup a folder
+##mirror_folder.key=B
+##mirror_folder.name=Backup Folder
 
-mp3fileinfo.album=Album
-mp3fileinfo.artist=Artist
-mp3fileinfo.bitrate=Bithastighet
-mp3fileinfo.length=L\u00e4ngd
-mp3fileinfo.samplerate=Samplingshastighet
-mp3fileinfo.size=Storlek
-mp3fileinfo.stereo_mono=Stereo/Mono
-mp3fileinfo.title=Titel
+mp3_file_info.album=Album
+mp3_file_info.artist=Artist
+mp3_file_info.bit_rate=Bithastighet
+mp3_file_info.length=L\u00e4ngd
+mp3_file_info.sample_rate=Samplingshastighet
+mp3_file_info.size=Storlek
+mp3_file_info.stereo_mono=Stereo/Mono
+mp3_file_info.title=Titel
 
 ##my_folders_panel.hide_previews=Hide preview folders
 
-myfolderstable._total_number_of_files=Totalt \# Filer
-myfolderstable.local_size=Lokal storlek
-myfolderstable.members=Medlemmar
-##myfolderstable.new_files=New Files
-myfolderstable.number_of_deleted_files=\# Borttagna
-##myfolderstable.number_of_incoming_files=Incoming
-myfolderstable.number_of_local_files=\# Lokala
-myfolderstable.number_of_members={0} medlemmar
-##myfolderstable.sync=Sync
-myfolderstable.syncprofile=Synk profil
-myfolderstable.total_size=Total storlek
+my_folders_table._total_number_of_files=Totalt \# Filer
+my_folders_table.local_size=Lokal storlek
+my_folders_table.members=Medlemmar
+##my_folders_table.new_files=New Files
+my_folders_table.number_of_deleted_files=\# Borttagna
+##my_folders_table.number_of_incoming_files=Incoming
+my_folders_table.number_of_local_files=\# Lokala
+my_folders_table.number_of_members={0} medlemmar
+##my_folders_table.sync=Sync
+my_folders_table.transfer_mode=Synk profil
+my_folders_table.total_size=Total storlek
 
 navigationbuttons.back=Backa
 navigationbuttons.back_to=Backa till {0}
@@ -778,7 +778,7 @@ preferences.dialog.dialogs.title=Dialoger
 ##preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a profile for multiple folders
 preferences.dialog.dialogs.warnoncloseifnotinsync=Varna vid st\u00e4ngning av programmet om en forder fortfarande h\u00e5ller p\u00e5 att synkroniseras
 preferences.dialog.dialogs.warnonlimitedconnectivity=Varna vid begr\u00e4nsad anslutning (Inga inkommande anslutningar)
-##preferences.dialog.dialogs.warnonlowmemory=Warn on low available memory
+##preferences.dialog.dialogs.warnonlow_memory=Warn on low available memory
 preferences.dialog.dialogs.warnonpossiblefilename_problems=Varna vid risk f\u00f6r filnamnsproblem (t.ex. f\u00f6r l\u00e5ng f\u00f6r Apple classic)
 preferences.dialog.dyndns=Min (dynamiska) DNS
 preferences.dialog.dyndns.title=DynDNS
@@ -1276,11 +1276,11 @@ wizard.filesharing.sharedsuccess=Du lyckades dela en ny folder\!\nAndtra anv\u00
 ##wizard.host_panel.pcsjoin=Other computers can join this folder now
 ##wizard.host_panel.select=Please select the directory which should be the host
 ##wizard.invite.selectlocaldirectory=Please select local target directory for the files
-wizard.loadinvitation.addtofriends=L\u00e4gg till {0} till v\u00e4nner
-wizard.loadinvitation.choosefile=Val av inbjudningsfil
-wizard.loadinvitation.select=V\u00e4lj inbjudningsfil
-wizard.loadinvitation.selectfile=Var v\u00e4nlig v\u00e4lj inbjudningsfil
-wizard.loadinvitation.title=Ladda inbjudan
+wizard.load_invitation.addtofriends=L\u00e4gg till {0} till v\u00e4nner
+wizard.load_invitation.choosefile=Val av inbjudningsfil
+wizard.load_invitation.select=V\u00e4lj inbjudningsfil
+wizard.load_invitation.selectfile=Var v\u00e4nlig v\u00e4lj inbjudningsfil
+wizard.load_invitation.title=Ladda inbjudan
 ##wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.pfwizard.title=Assistenten
 ##wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
