--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -561,7 +561,7 @@ general.overwrite_all=\u8986\u76d6\u6240\u6709
 general.password=\u5bc6\u7801
 general.powerfolder=PowerFolder
 general.preview_folder=\u9884\u89c8\u6587\u4ef6\u5939
-general.recyclebin=\u56de\u6536\u7ad9
+general.recycle_bin=\u56de\u6536\u7ad9
 general.saturday=\u661f\u671f\u516d
 general.save=\u4fdd\u5b58
 general.save.key=S
@@ -601,72 +601,72 @@ invitation_files.description=PowerFolder \u9080\u8bf7
 invite_received_handler.notify.message=\u4f60\u6536\u5230\u4e00\u4e2a\u6765\u81ea{0}\u7684PowerFolder\u9080\u8bf7\u3002
 invite_received_handler.notify.title=\u6536\u5230\u9080\u8bf7
 
-limitedconnection.dont_autodetect=\u4e0d\u518d\u68c0\u6d4b\u53d7\u9650\u8fde\u63a5
-limitedconnection.text=PowerFolder\u68c0\u6d4b\u5230\u7f51\u7edc\u7684\u8fde\u63a5\u53d7\u9650\u3002\n\u53ef\u80fd\u662f\u7531\u9632\u706b\u5899\u3001\u8def\u7531\u5668\u6216Windows\u8fde\u63a5\u5171\u4eab\u6240\u5f15\u8d77\u3002\n\u6211\u4eec\u7684\u7591\u96be\u89e3\u7b54\u6709\u4ecb\u7ecd\u6539\u5584\u7f51\u7edc\u8fde\u63a5\u7684\u65b9\u6cd5\u3002\nhttp\://www.powerfolder.com
-limitedconnection.title=\u53d7\u9650\u7684\u8fde\u63a5
+limited_connection.dont_autodetect=\u4e0d\u518d\u68c0\u6d4b\u53d7\u9650\u8fde\u63a5
+limited_connection.text=PowerFolder\u68c0\u6d4b\u5230\u7f51\u7edc\u7684\u8fde\u63a5\u53d7\u9650\u3002\n\u53ef\u80fd\u662f\u7531\u9632\u706b\u5899\u3001\u8def\u7531\u5668\u6216Windows\u8fde\u63a5\u5171\u4eab\u6240\u5f15\u8d77\u3002\n\u6211\u4eec\u7684\u7591\u96be\u89e3\u7b54\u6709\u4ecb\u7ecd\u6539\u5584\u7f51\u7edc\u8fde\u63a5\u7684\u65b9\u6cd5\u3002\nhttp\://www.powerfolder.com
+limited_connection.title=\u53d7\u9650\u7684\u8fde\u63a5
 
-linespeed.T1=T1 1.544mbit/\u79d2
-linespeed.T3=T3 43.232mbit/\u79d2
-linespeed.adsl128=DSL 128Kbit
-linespeed.adsl256=DSL 256Kbit
-linespeed.adsl512=DSL 512Kbit
-linespeed.adsl768=DSL 768Kbit
-linespeed.customspeed=\u81ea\u5b9a\u4e49
-linespeed.downloadspeed=\u4e0b\u8f7d\u9650\u5236
-linespeed.isdnspeed128=ISDN 128Kbit
-linespeed.isdnspeed64=ISDN 64Kbit
-linespeed.lan10=\u5c40\u57df\u7f51 10mbit/\u79d2
-linespeed.lan100=\u5c40\u57df\u7f51 100mbit/\u79d2
-linespeed.lan1000=\u5c40\u57df\u7f51 1000mbit/\u79d2
-linespeed.unlimited=\u4e0d\u9650\u901f
-linespeed.uploadspeed=\u4e0a\u4f20\u9650\u901f
+line_speed.T1=T1 1.544mbit/\u79d2
+line_speed.T3=T3 43.232mbit/\u79d2
+line_speed.adsl128=DSL 128Kbit
+line_speed.adsl256=DSL 256Kbit
+line_speed.adsl512=DSL 512Kbit
+line_speed.adsl768=DSL 768Kbit
+line_speed.custom_speed=\u81ea\u5b9a\u4e49
+line_speed.download_speed=\u4e0b\u8f7d\u9650\u5236
+line_speed.isdn_speed128=ISDN 128Kbit
+line_speed.isdn_speed64=ISDN 64Kbit
+line_speed.lan10=\u5c40\u57df\u7f51 10mbit/\u79d2
+line_speed.lan100=\u5c40\u57df\u7f51 100mbit/\u79d2
+line_speed.lan1000=\u5c40\u57df\u7f51 1000mbit/\u79d2
+line_speed.unlimited=\u4e0d\u9650\u901f
+line_speed.upload_speed=\u4e0a\u4f20\u9650\u901f
 
 linktoclipboard.description=\u590d\u5236\u4e00\u4e2a\u53ef\u70b9\u51fb\u7684PowerFolder\u94fe\u63a5\u5230\u526a\u8d34\u677f\uff0c\u4ee5\u4fbf\u4eba\u4eec\u53ef\u4ee5\u52a0\u5165\u6587\u4ef6\u5939\u5e76\u4e0b\u8f7d\u6587\u4ef6\u3002
 linktoclipboard.key=c
 linktoclipboard.name=\u590d\u5236 PowerFolder \u94fe\u63a5\u5230\u526a\u8d34\u677f
 
-loadinvitation.title=\u901a\u8fc7\u9080\u8bf7\u6587\u4ef6\u52a0\u5165\u6587\u4ef6\u5939
+load_invitation.title=\u901a\u8fc7\u9080\u8bf7\u6587\u4ef6\u52a0\u5165\u6587\u4ef6\u5939
 
-lowmemory.configure_failure=PowerFolder\u4e0d\u80fd\u914d\u7f6e\u989d\u5916\u7684\u5185\u5b58\u3002\n\u8bf7\u8054\u7cfbPowerFolder\u652f\u6301\u56e2\u961f\u4ee5\u83b7\u5f97\u5efa\u8bae\u3002
-lowmemory.configure_success=\u989d\u5916\u7684\u5185\u5b58\u5df2\u7ecf\u88ab\u914d\u7f6e\u3002\nPowerFolder\u5fc5\u987b\u624b\u52a8\u91cd\u542f\u624d\u80fd\u751f\u6548\u3002
-lowmemory.do_nothing=\u5ffd\u7565
-lowmemory.increase=\u589e\u52a0\u5185\u5b58
-lowmemory.text=PowerFolder\u5185\u5b58\u4e0d\u8db3\u3002\n\nPowerFolder\u4f1a\u5c1d\u8bd5\u589e\u52a0\u53ef\u7528\u5185\u5b58\u3002
-lowmemory.title=\u5185\u5b58\u4e0d\u8db3
+low_memory.configure_failure=PowerFolder\u4e0d\u80fd\u914d\u7f6e\u989d\u5916\u7684\u5185\u5b58\u3002\n\u8bf7\u8054\u7cfbPowerFolder\u652f\u6301\u56e2\u961f\u4ee5\u83b7\u5f97\u5efa\u8bae\u3002
+low_memory.configure_success=\u989d\u5916\u7684\u5185\u5b58\u5df2\u7ecf\u88ab\u914d\u7f6e\u3002\nPowerFolder\u5fc5\u987b\u624b\u52a8\u91cd\u542f\u624d\u80fd\u751f\u6548\u3002
+low_memory.do_nothing=\u5ffd\u7565
+low_memory.increase=\u589e\u52a0\u5185\u5b58
+low_memory.text=PowerFolder\u5185\u5b58\u4e0d\u8db3\u3002\n\nPowerFolder\u4f1a\u5c1d\u8bd5\u589e\u52a0\u53ef\u7528\u5185\u5b58\u3002
+low_memory.title=\u5185\u5b58\u4e0d\u8db3
 
-masternode.nobody=- \u6ca1\u6709\u7528\u6237 -
+master_node.nobody=- \u6ca1\u6709\u7528\u6237 -
 
 member.friend=\u597d\u53cb
 member.non_mutual_friend=\u6ca1\u6709\u5171\u540c\u7684\u597d\u53cb
-member.onlan=Onlan
+member.on_lan=Onlan
 member.supernode=\u8d85\u7ea7\u7528\u6237
 
-mirrorfolder.description=\u8bbe\u7f6e\u7f51\u7edc\u670d\u52a1\u4ee5\u5907\u4efd\u6587\u4ef6\u5939
-mirrorfolder.key=B
-mirrorfolder.name=\u5907\u4efd\u6587\u4ef6\u5939
+mirror_folder.description=\u8bbe\u7f6e\u7f51\u7edc\u670d\u52a1\u4ee5\u5907\u4efd\u6587\u4ef6\u5939
+mirror_folder.key=B
+mirror_folder.name=\u5907\u4efd\u6587\u4ef6\u5939
 
-mp3fileinfo.album=\u4e13\u8f91
-mp3fileinfo.artist=\u827a\u672f\u5bb6
-mp3fileinfo.bitrate=\u6bd4\u7279\u7387
-mp3fileinfo.length=\u957f\u5ea6
-mp3fileinfo.samplerate=\u91c7\u6837\u7387
-mp3fileinfo.size=\u5927\u5c0f
-mp3fileinfo.stereo_mono=\u7acb\u4f53\u58f0/\u5355\u58f0\u9053
-mp3fileinfo.title=\u6807\u9898
+mp3_file_info.album=\u4e13\u8f91
+mp3_file_info.artist=\u827a\u672f\u5bb6
+mp3_file_info.bit_rate=\u6bd4\u7279\u7387
+mp3_file_info.length=\u957f\u5ea6
+mp3_file_info.sample_rate=\u91c7\u6837\u7387
+mp3_file_info.size=\u5927\u5c0f
+mp3_file_info.stereo_mono=\u7acb\u4f53\u58f0/\u5355\u58f0\u9053
+mp3_file_info.title=\u6807\u9898
 
 my_folders_panel.hide_previews=\u9690\u85cf\u9884\u89c8\u6587\u4ef6\u5939
 
-myfolderstable._total_number_of_files=\u672c\u5730 \# \u6587\u4ef6
-myfolderstable.local_size=\u672c\u5730\u5927\u5c0f
-myfolderstable.members=\u6210\u5458
-myfolderstable.new_files=\u65b0\u6587\u4ef6
-myfolderstable.number_of_deleted_files=\# \u5220\u9664
-myfolderstable.number_of_incoming_files=\u6536\u5230
-myfolderstable.number_of_local_files=\# \u672c\u5730
-myfolderstable.number_of_members={0} \u6210\u5458
-myfolderstable.sync=\u540c\u6b65
-myfolderstable.syncprofile=\u540c\u6b65\u9009\u9879
-myfolderstable.total_size=\u603b\u5927\u5c0f
+my_folders_table._total_number_of_files=\u672c\u5730 \# \u6587\u4ef6
+my_folders_table.local_size=\u672c\u5730\u5927\u5c0f
+my_folders_table.members=\u6210\u5458
+my_folders_table.new_files=\u65b0\u6587\u4ef6
+my_folders_table.number_of_deleted_files=\# \u5220\u9664
+my_folders_table.number_of_incoming_files=\u6536\u5230
+my_folders_table.number_of_local_files=\# \u672c\u5730
+my_folders_table.number_of_members={0} \u6210\u5458
+my_folders_table.sync=\u540c\u6b65
+my_folders_table.transfer_mode=\u540c\u6b65\u9009\u9879
+my_folders_table.total_size=\u603b\u5927\u5c0f
 
 navigationbuttons.back=\u540e\u9000
 navigationbuttons.back_to=\u540e\u9000\u5230 {0}
@@ -777,7 +777,7 @@ preferences.dialog.dialogs.title=\u5bf9\u8bdd\u6846
 preferences.dialog.dialogs.warn_on_duplicate_folders=\u66f4\u6539\u591a\u4e2a\u6587\u4ef6\u5939\u914d\u7f6e\u65f6\u53d1\u51fa\u8b66\u544a
 preferences.dialog.dialogs.warnoncloseifnotinsync=\u540c\u6b65\u65f6\u5173\u95ed\u7a0b\u5e8f\u63d0\u793a
 preferences.dialog.dialogs.warnonlimitedconnectivity=\u8fde\u63a5\u53d7\u9650\u65f6\u63d0\u793a(\u6ca1\u6709\u6536\u5230\u7684\u8fde\u63a5)
-preferences.dialog.dialogs.warnonlowmemory=\u5185\u5b58\u4e0d\u8db3\u65f6\u8b66\u544a
+preferences.dialog.dialogs.warnonlow_memory=\u5185\u5b58\u4e0d\u8db3\u65f6\u8b66\u544a
 preferences.dialog.dialogs.warnonpossiblefilename_problems=\u5728\u6587\u4ef6\u540d\u9519\u8bef\u547d\u540d\u65f6\u63d0\u793a(\u5982\u4f7f\u7528\u8fc7\u957f\u7684\u6587\u4ef6\u540d)
 preferences.dialog.dyndns=\u52a8\u6001DNS
 preferences.dialog.dyndns.title=\u52a8\u6001DNS
@@ -1275,11 +1275,11 @@ wizard.host_panel.folder_host_success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e
 wizard.host_panel.pcsjoin=\u5176\u5b83\u8ba1\u7b97\u673a\u73b0\u5728\u53ef\u4ee5\u52a0\u5165\u8fd9\u4e2a\u6587\u4ef6\u5939
 wizard.host_panel.select=\u8bf7\u9009\u62e9\u4f5c\u4e3a\u4e3b\u6587\u4ef6\u5939\u7684\u76ee\u5f55
 wizard.invite.selectlocaldirectory=\u8bf7\u4e3a\u6587\u4ef6\u9009\u62e9\u672c\u5730\u7684\u76ee\u6807\u76ee\u5f55
-wizard.loadinvitation.addtofriends=\u6dfb\u52a0 {0} \u4e3a\u597d\u53cb
-wizard.loadinvitation.choosefile=\u9009\u62e9\u9080\u8bf7\u6587\u4ef6
-wizard.loadinvitation.select=\u9009\u62e9\u9080\u8bf7\u6587\u4ef6
-wizard.loadinvitation.selectfile=\u8bf7\u9009\u62e9\u9080\u8bf7\u6587\u4ef6
-wizard.loadinvitation.title=\u8f7d\u5165\u9080\u8bf7
+wizard.load_invitation.addtofriends=\u6dfb\u52a0 {0} \u4e3a\u597d\u53cb
+wizard.load_invitation.choosefile=\u9009\u62e9\u9080\u8bf7\u6587\u4ef6
+wizard.load_invitation.select=\u9009\u62e9\u9080\u8bf7\u6587\u4ef6
+wizard.load_invitation.selectfile=\u8bf7\u9009\u62e9\u9080\u8bf7\u6587\u4ef6
+wizard.load_invitation.title=\u8f7d\u5165\u9080\u8bf7
 wizard.login_online_storage.setup_default=\u8bbe\u7f6e\u9ed8\u8ba4\u7684\u540c\u6b65\u6587\u4ef6\u5939
 wizard.pfwizard.title=\u5411\u5bfc
 wizard.project_panel.folder_project_success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u4e00\u4e2a\u9879\u76ee\u6587\u4ef6\u5939\uff01
