--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -560,7 +560,7 @@ general.overwrite_all=\u3059\u3079\u3066\u4E0A\u66F8\u304D
 general.password=\u30D1\u30B9\u30EF\u30FC\u30C9
 general.powerfolder=PowerFolder
 general.preview_folder=\u30D7\u30EC\u30D3\u30E5\u30FC\u30D5\u30A9\u30EB\u30C0
-general.recyclebin=\u3054\u307F\u7BB1
+general.recycle_bin=\u3054\u307F\u7BB1
 general.saturday=\u571F\u66DC\u65E5
 general.save=\u4FDD\u5B58(S)
 general.save.key=S
@@ -600,71 +600,71 @@ invitation_files.description=PowerFolder \u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u3
 invite_received_handler.notify.message={0} \u3055\u3093\u304B\u3089 PowerFolder \u306E\u62DB\u5F85\u72B6\u3092\u53D7\u3051\u53D6\u308A\u307E\u3057\u305F\u3002
 invite_received_handler.notify.title=\u62DB\u5F85\u72B6\u306E\u53D7\u3051\u53D6\u308A
 
-limitedconnection.dont_autodetect=\u63A5\u7D9A\u5236\u9650\u306E\u691C\u51FA\u3092\u505C\u6B62
-limitedconnection.text=PowerFolder \u306F\u3001\u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u63A5\u7D9A\u306B\u5236\u9650\u304C\u3042\u308B\u3053\u3068\u3092\u691C\u77E5\u3057\u307E\u3057\u305F\u3002\n\u539F\u56E0\u306F\u30D5\u30A1\u30A4\u30A2\u30FC\u30A6\u30A9\u30FC\u30EB\u3084\u30EB\u30FC\u30BF\u3001Windows \u306E\u30A4\u30F3\u30BF\u30FC\u30CD\u30C3\u30C8\u63A5\u7D9A\u5171\u6709\u306A\u3069\u306B\u3042\u308B\u53EF\u80FD\u6027\u304C\u3042\u308A\u307E\u3059\u3002\n\u63A5\u7D9A\u3092\u6539\u5584\u3055\u305B\u308B\u65B9\u6CD5\u306B\u3064\u3044\u3066\u306F\u3001\u3053\u3061\u3089\u306E FAQ \u30DA\u30FC\u30B8\u3092\u53C2\u8003\u306B\u3057\u3066\u304F\u3060\u3055\u3044\u3002\nhttp\://www.powerfolder.com
-limitedconnection.title=\u63A5\u7D9A\u306B\u5236\u9650\u3042\u308A
+limited_connection.dont_autodetect=\u63A5\u7D9A\u5236\u9650\u306E\u691C\u51FA\u3092\u505C\u6B62
+limited_connection.text=PowerFolder \u306F\u3001\u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u63A5\u7D9A\u306B\u5236\u9650\u304C\u3042\u308B\u3053\u3068\u3092\u691C\u77E5\u3057\u307E\u3057\u305F\u3002\n\u539F\u56E0\u306F\u30D5\u30A1\u30A4\u30A2\u30FC\u30A6\u30A9\u30FC\u30EB\u3084\u30EB\u30FC\u30BF\u3001Windows \u306E\u30A4\u30F3\u30BF\u30FC\u30CD\u30C3\u30C8\u63A5\u7D9A\u5171\u6709\u306A\u3069\u306B\u3042\u308B\u53EF\u80FD\u6027\u304C\u3042\u308A\u307E\u3059\u3002\n\u63A5\u7D9A\u3092\u6539\u5584\u3055\u305B\u308B\u65B9\u6CD5\u306B\u3064\u3044\u3066\u306F\u3001\u3053\u3061\u3089\u306E FAQ \u30DA\u30FC\u30B8\u3092\u53C2\u8003\u306B\u3057\u3066\u304F\u3060\u3055\u3044\u3002\nhttp\://www.powerfolder.com
+limited_connection.title=\u63A5\u7D9A\u306B\u5236\u9650\u3042\u308A
 
-linespeed.T1=T1 \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 1.544mbit/s
-linespeed.T3=T3 \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 43.232mbit/s
-linespeed.adsl128=DSL \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 \u6700\u5927 128Kbit
-linespeed.adsl256=DSL \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 \u6700\u5927 256Kbit
-linespeed.adsl512=DSL \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 \u6700\u5927 512Kbit
-linespeed.adsl768=DSL \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 \u6700\u5927 768Kbit
-linespeed.customspeed=\u901F\u5EA6\u4EFB\u610F\u6307\u5B9A
-linespeed.downloadspeed=\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u901F\u5EA6\u4E0A\u9650
-linespeed.isdnspeed128=ISDN 128Kbit
-linespeed.isdnspeed64=ISDN 64Kbit
-linespeed.lan10=LAN \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 10mbit/s
-linespeed.lan100=LAN \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 100mbit/s
-linespeed.lan1000=LAN \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 1000mbit/s
-linespeed.unlimited=\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u901F\u5EA6 \u7121\u5236\u9650
-linespeed.uploadspeed=\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u901F\u5EA6\u4E0A\u9650
+line_speed.T1=T1 \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 1.544mbit/s
+line_speed.T3=T3 \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 43.232mbit/s
+line_speed.adsl128=DSL \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 \u6700\u5927 128Kbit
+line_speed.adsl256=DSL \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 \u6700\u5927 256Kbit
+line_speed.adsl512=DSL \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 \u6700\u5927 512Kbit
+line_speed.adsl768=DSL \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 \u6700\u5927 768Kbit
+line_speed.custom_speed=\u901F\u5EA6\u4EFB\u610F\u6307\u5B9A
+line_speed.download_speed=\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u901F\u5EA6\u4E0A\u9650
+line_speed.isdn_speed128=ISDN 128Kbit
+line_speed.isdn_speed64=ISDN 64Kbit
+line_speed.lan10=LAN \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 10mbit/s
+line_speed.lan100=LAN \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 100mbit/s
+line_speed.lan1000=LAN \u4E0A\u308A\u901A\u4FE1\u901F\u5EA6 1000mbit/s
+line_speed.unlimited=\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u901F\u5EA6 \u7121\u5236\u9650
+line_speed.upload_speed=\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u901F\u5EA6\u4E0A\u9650
 
 linktoclipboard.description=\u30AF\u30EA\u30C3\u30AF\u53EF\u80FD\u306A PowerFolder \u30EA\u30F3\u30AF\u3092\u30AF\u30EA\u30C3\u30D7\u30DC\u30FC\u30C9\u306B\u30B3\u30D4\u30FC\uFF08\u4ED6\u30E6\u30FC\u30B6\u30FC\u304C\u3053\u306E\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u3057\u3066\u9078\u629E\u30D5\u30A1\u30A4\u30EB\u3092\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u3059\u308B\u305F\u3081\u306B\u4F7F\u7528\u53EF\u80FD\uFF09
 linktoclipboard.key=C
 linktoclipboard.name=PowerFolder \u30EA\u30F3\u30AF\u306E\u30B3\u30D4\u30FC(C)
 
-loadinvitation.title=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB\u3092\u901A\u3058\u305F\u30D5\u30A9\u30EB\u30C0\u3078\u306E\u53C2\u52A0
+load_invitation.title=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB\u3092\u901A\u3058\u305F\u30D5\u30A9\u30EB\u30C0\u3078\u306E\u53C2\u52A0
 
-lowmemory.configure_failure=PowerFolder \u306F\u8FFD\u52A0\u7684\u30E1\u30E2\u30EA\u306E\u8A2D\u5B9A\u304C\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002\n\u30A2\u30C9\u30D0\u30A4\u30B9\u3092\u6C42\u3081\u308B\u306B\u306F PowerFolder \u306E\u30B5\u30DD\u30FC\u30C8\u306B\u9023\u7D61\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-lowmemory.configure_success=\u8FFD\u52A0\u7684\u30E1\u30E2\u30EA\u3092\u8A2D\u5B9A\u3057\u307E\u3057\u305F\u3002\n\u3053\u308C\u3092\u53CD\u6620\u3055\u305B\u308B\u306B\u306F PowerFolder \u306E\u518D\u30B9\u30BF\u30FC\u30C8\u304C\u5FC5\u8981\u3067\u3059\u3002
-lowmemory.do_nothing=\u4F55\u3082\u3057\u306A\u3044
-lowmemory.increase=\u30E1\u30E2\u30EA\u3092\u5897\u3084\u3059
-lowmemory.text=PowerFolder \u304C\u5229\u7528\u53EF\u80FD\u30E1\u30E2\u30EA\u91CF\u3092\u4F7F\u3044\u5207\u308A\u307E\u3057\u305F\u3002\n\nPowerFolder \u306F\u5229\u7528\u53EF\u80FD\u30E1\u30E2\u30EA\u91CF\u306E\u5897\u52A0\u3092\u8A66\u307F\u308B\u3053\u3068\u304C\u3067\u304D\u307E\u3059\u3002
-lowmemory.title=\u904E\u5C11\u30E1\u30E2\u30EA
-masternode.nobody=- \u8AB0\u3082\u6307\u5B9A\u3057\u306A\u3044 -
+low_memory.configure_failure=PowerFolder \u306F\u8FFD\u52A0\u7684\u30E1\u30E2\u30EA\u306E\u8A2D\u5B9A\u304C\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002\n\u30A2\u30C9\u30D0\u30A4\u30B9\u3092\u6C42\u3081\u308B\u306B\u306F PowerFolder \u306E\u30B5\u30DD\u30FC\u30C8\u306B\u9023\u7D61\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+low_memory.configure_success=\u8FFD\u52A0\u7684\u30E1\u30E2\u30EA\u3092\u8A2D\u5B9A\u3057\u307E\u3057\u305F\u3002\n\u3053\u308C\u3092\u53CD\u6620\u3055\u305B\u308B\u306B\u306F PowerFolder \u306E\u518D\u30B9\u30BF\u30FC\u30C8\u304C\u5FC5\u8981\u3067\u3059\u3002
+low_memory.do_nothing=\u4F55\u3082\u3057\u306A\u3044
+low_memory.increase=\u30E1\u30E2\u30EA\u3092\u5897\u3084\u3059
+low_memory.text=PowerFolder \u304C\u5229\u7528\u53EF\u80FD\u30E1\u30E2\u30EA\u91CF\u3092\u4F7F\u3044\u5207\u308A\u307E\u3057\u305F\u3002\n\nPowerFolder \u306F\u5229\u7528\u53EF\u80FD\u30E1\u30E2\u30EA\u91CF\u306E\u5897\u52A0\u3092\u8A66\u307F\u308B\u3053\u3068\u304C\u3067\u304D\u307E\u3059\u3002
+low_memory.title=\u904E\u5C11\u30E1\u30E2\u30EA
+master_node.nobody=- \u8AB0\u3082\u6307\u5B9A\u3057\u306A\u3044 -
 
 member.friend=\u53CB\u4EBA
 member.non_mutual_friend=\u975E\u30FB\u76F8\u4E92\u53CB\u4EBA
-member.onlan=LAN \u5185
+member.on_lan=LAN \u5185
 member.supernode=\u30B9\u30FC\u30D1\u30FC\u30CE\u30FC\u30C9
 
-mirrorfolder.description=\u30D5\u30A9\u30EB\u30C0\u3092\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u3059\u308B\u305F\u3081\u306E Web\u30B5\u30FC\u30D3\u30B9\u306E\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7
-mirrorfolder.key=B
-mirrorfolder.name=\u30D5\u30A9\u30EB\u30C0\u306E\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7(B)
+mirror_folder.description=\u30D5\u30A9\u30EB\u30C0\u3092\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7\u3059\u308B\u305F\u3081\u306E Web\u30B5\u30FC\u30D3\u30B9\u306E\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7
+mirror_folder.key=B
+mirror_folder.name=\u30D5\u30A9\u30EB\u30C0\u306E\u30D0\u30C3\u30AF\u30A2\u30C3\u30D7(B)
 
-mp3fileinfo.album=\u30A2\u30EB\u30D0\u30E0
-mp3fileinfo.artist=\u30A2\u30FC\u30C6\u30A3\u30B9\u30C8
-mp3fileinfo.bitrate=\u30D3\u30C3\u30C8\u30EC\u30FC\u30C8
-mp3fileinfo.length=\u6642\u9593
-mp3fileinfo.samplerate=\u30B5\u30F3\u30D7\u30EB\u30EC\u30FC\u30C8
-mp3fileinfo.size=\u30B5\u30A4\u30BA
-mp3fileinfo.stereo_mono=\u30B9\u30C6\u30EC\u30AA/\u30E2\u30CE\u30E9\u30EB
-mp3fileinfo.title=\u30BF\u30A4\u30C8\u30EB
+mp3_file_info.album=\u30A2\u30EB\u30D0\u30E0
+mp3_file_info.artist=\u30A2\u30FC\u30C6\u30A3\u30B9\u30C8
+mp3_file_info.bit_rate=\u30D3\u30C3\u30C8\u30EC\u30FC\u30C8
+mp3_file_info.length=\u6642\u9593
+mp3_file_info.sample_rate=\u30B5\u30F3\u30D7\u30EB\u30EC\u30FC\u30C8
+mp3_file_info.size=\u30B5\u30A4\u30BA
+mp3_file_info.stereo_mono=\u30B9\u30C6\u30EC\u30AA/\u30E2\u30CE\u30E9\u30EB
+mp3_file_info.title=\u30BF\u30A4\u30C8\u30EB
 
 my_folders_panel.hide_previews=\u30D7\u30EC\u30D3\u30E5\u30FC\u30D5\u30A9\u30EB\u30C0\u3092\u96A0\u3059
 
-myfolderstable._total_number_of_files=\# \u5408\u8A08\u30D5\u30A1\u30A4\u30EB
-myfolderstable.local_size=\u30ED\u30FC\u30AB\u30EB\u30B5\u30A4\u30BA
-myfolderstable.members=\u30E1\u30F3\u30D0\u30FC
-myfolderstable.new_files=\u65B0\u898F\u30D5\u30A1\u30A4\u30EB
-myfolderstable.number_of_deleted_files=\# \u524A\u9664\u6E08
-myfolderstable.number_of_incoming_files=\u53D7\u4FE1\u4E2D
-myfolderstable.number_of_local_files=\# \u30ED\u30FC\u30AB\u30EB
-myfolderstable.number_of_members={0} \u30E1\u30F3\u30D0\u30FC
-myfolderstable.sync=\u540C\u671F
-myfolderstable.syncprofile=\u540C\u671F\u65B9\u5F0F
-myfolderstable.total_size=\u5408\u8A08\u30B5\u30A4\u30BA
+my_folders_table._total_number_of_files=\# \u5408\u8A08\u30D5\u30A1\u30A4\u30EB
+my_folders_table.local_size=\u30ED\u30FC\u30AB\u30EB\u30B5\u30A4\u30BA
+my_folders_table.members=\u30E1\u30F3\u30D0\u30FC
+my_folders_table.new_files=\u65B0\u898F\u30D5\u30A1\u30A4\u30EB
+my_folders_table.number_of_deleted_files=\# \u524A\u9664\u6E08
+my_folders_table.number_of_incoming_files=\u53D7\u4FE1\u4E2D
+my_folders_table.number_of_local_files=\# \u30ED\u30FC\u30AB\u30EB
+my_folders_table.number_of_members={0} \u30E1\u30F3\u30D0\u30FC
+my_folders_table.sync=\u540C\u671F
+my_folders_table.transfer_mode=\u540C\u671F\u65B9\u5F0F
+my_folders_table.total_size=\u5408\u8A08\u30B5\u30A4\u30BA
 
 navigationbuttons.back=\u623B\u308B
 navigationbuttons.back_to={0} \u3078\u623B\u308B
@@ -775,7 +775,7 @@ preferences.dialog.dialogs.title=\u30DD\u30C3\u30D7\u30A2\u30C3\u30D7
 preferences.dialog.dialogs.warn_on_duplicate_folders=\u8907\u6570\u30D5\u30A9\u30EB\u30C0\u7528\u30D7\u30ED\u30D5\u30A1\u30A4\u30EB\u306E\u5909\u66F4\u6642\u306B\u8B66\u544A
 preferences.dialog.dialogs.warnoncloseifnotinsync=\u30D7\u30ED\u30B0\u30E9\u30E0\u3092\u9589\u3058\u308B\u969B\u30D5\u30A9\u30EB\u30C0\u304C\u540C\u671F\u4E2D\u306E\u3068\u304D\u306F\u8B66\u544A
 preferences.dialog.dialogs.warnonlimitedconnectivity=\u63A5\u7D9A\u304C\u5236\u9650\u3055\u308C\u3066\u3044\u308B\u3068\u304D\u306F\u8B66\u544A\uFF08\u53D7\u4FE1\u65B9\u5411\u306E\u63A5\u7D9A\u304C\u906E\u65AD\u72B6\u614B\uFF09
-preferences.dialog.dialogs.warnonlowmemory=\u5229\u7528\u53EF\u80FD\u30E1\u30E2\u30EA\u91CF\u304C\u5C11\u306A\u3044\u3068\u304D\u306F\u8B66\u544A
+preferences.dialog.dialogs.warnonlow_memory=\u5229\u7528\u53EF\u80FD\u30E1\u30E2\u30EA\u91CF\u304C\u5C11\u306A\u3044\u3068\u304D\u306F\u8B66\u544A
 preferences.dialog.dialogs.warnonpossiblefilename_problems=\u30D5\u30A1\u30A4\u30EB\u540D\u306B\u554F\u984C\u306E\u6050\u308C\u304C\u3042\u308B\u3068\u304D\u306F\u8B66\u544A\uFF08\u4F8B Apple classic \u306B\u306F\u9577\u3059\u304E\u308B\u540D\u524D\uFF09
 preferences.dialog.dyndns=\u81EA\u5206\u306E\uFF08\u52D5\u7684\uFF09DNS
 preferences.dialog.dyndns.title=DynDNS
@@ -1273,11 +1273,11 @@ wizard.host_panel.folder_host_success=\u30DB\u30B9\u30C8\u30FB\u30D5\u30A9\u30EB
 wizard.host_panel.pcsjoin=\u4ED6\u306E\u30B3\u30F3\u30D4\u30E5\u30FC\u30BF\u304C\u3053\u306E\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\u3067\u304D\u308B\u3088\u3046\u306B\u306A\u308A\u307E\u3057\u305F
 wizard.host_panel.select=\u30DB\u30B9\u30C8\u306B\u3059\u308B\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
 wizard.invite.selectlocaldirectory=\u30D5\u30A1\u30A4\u30EB\u306E\u30ED\u30FC\u30AB\u30EB\u4FDD\u5B58\u5148\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
-wizard.loadinvitation.addtofriends={0} \u3055\u3093\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0
-wizard.loadinvitation.choosefile=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB\u306E\u9078\u629E
-wizard.loadinvitation.select=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB\u306E\u9078\u629E
-wizard.loadinvitation.selectfile=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB(.invitation)\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
-wizard.loadinvitation.title=\u62DB\u5F85\u72B6\u306E\u8AAD\u307F\u8FBC\u307F
+wizard.load_invitation.addtofriends={0} \u3055\u3093\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0
+wizard.load_invitation.choosefile=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB\u306E\u9078\u629E
+wizard.load_invitation.select=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB\u306E\u9078\u629E
+wizard.load_invitation.selectfile=\u62DB\u5F85\u72B6\u30D5\u30A1\u30A4\u30EB(.invitation)\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044
+wizard.load_invitation.title=\u62DB\u5F85\u72B6\u306E\u8AAD\u307F\u8FBC\u307F
 wizard.login_online_storage.setup_default=\u30C7\u30D5\u30A9\u30EB\u30C8\u306E\u540C\u671F\u30D5\u30A9\u30EB\u30C0\u3092\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 wizard.pfwizard.title=\u30A6\u30A3\u30B6\u30FC\u30C9
 wizard.project_panel.folder_project_success=\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u30FB\u30D5\u30A9\u30EB\u30C0\u306E\u30BB\u30C3\u30C8\u30A2\u30C3\u30D7\u306B\u6210\u529F\u3057\u307E\u3057\u305F\uFF01\n
